--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -70,6 +70,8 @@
   <string name="BucketedThreadMedia_Yesterday">Χθες</string>
   <string name="BucketedThreadMedia_This_week">Αυτή την εβδομάδα</string>
   <string name="BucketedThreadMedia_This_month">Αυτό το μήνα</string>
+  <string name="BucketedThreadMedia_Large">Μεγάλο</string>
+  <string name="BucketedThreadMedia_Small">Μικρό</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Εισερχόμενη κλήση</string>
   <!--CameraActivity-->
@@ -92,6 +94,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Δεν βρέθηκε web browser.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Μια τηλεφωνική κλήση είναι ήδη σε εξέλιξη.</string>
+  <string name="CommunicationActions_cancel">Ακύρωση</string>
+  <string name="CommunicationActions_call">Κλήση</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Ο αριθμός ασφαλείας σας με τον/την %1$s άλλαξε. Είτε κάποιος προσπαθεί να υποκλέψει τη συνομιλία σας, είτε ο/η %2$s απλά επανεγκατέστησε το Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Προτείνουμε να επιβεβαιώσετε τον αριθμό ασφαλείας σας με αυτή την επαφή.</string>
@@ -100,6 +104,8 @@
   <string name="ContactsCursorLoader_recent_chats">Πρόσφατες συνομιλίες</string>
   <string name="ContactsCursorLoader_contacts">Επαφές</string>
   <string name="ContactsCursorLoader_groups">Ομάδες</string>
+  <string name="ContactsCursorLoader_phone_number_search">Εύρεση τηλεφωνικού αριθμού</string>
+  <string name="ContactsCursorLoader_username_search">Εύρεση Ονόματος Χρήστη</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Μήνυμα %s</string>
   <string name="ContactsDatabase_signal_call_s">Κλήση Signal %s</string>
@@ -385,19 +391,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">Πρόβλημα κατά την ανάκτηση ρυθμίσεων από τον πάροχο για τα MMS </string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Πολυμέσα</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="one">Διαγραφή επιλεγμένου μηνύματος;</item>
-    <item quantity="other">Διαγραφή επιλεγμένων μηνυμάτων;</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="one">Αυτή η επιλογή θα διαγράψει οριστικά το επιλεγμένο μήνυμα.</item>
-    <item quantity="other">Αυτή η επιλογή θα διαγράψει οριστικά τα %1$d επιλεγμένα μηνύματα.</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Γίνεται διαγραφή</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Διαγραφή μηνυμάτων…</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Αρχεία</string> -->
   <string name="MediaOverviewActivity_Select_all">Επιλογή όλων</string>
   <string name="MediaOverviewActivity_collecting_attachments">Τα συνημμένα συλλέγονται…</string>
+  <string name="MediaOverviewActivity_Audio">Ήχος</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Κλήση Signal εν εξελίξει</string>
   <string name="NotificationBarManager__establishing_signal_call">Γίνεται κλήση Signal</string>
@@ -492,6 +490,10 @@
   <string name="PlacePickerActivity_accept_address">Αποδοχή διεύθυνσης</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Η έκδοση των Υπηρεσιών Google Play που έχετε εγκαταστήσει δε λειτουργεί σωστά. Παρακαλούμε επανεγκαταστήστε τις Υπηρεσίες Google Play και δοκιμάστε ξανά.</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">Αποθήκευση</string>
+  <!--ProfileEditOverviewFragment-->
+  <string name="ProfileEditOverviewFragment_profile">Προφίλ</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Βαθμολογήστε αυτή την εφαρμογή</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Αν σας αρέσει αυτή η εφαρμογή, βοηθήστε μας βαθμολογώντας την - δε θα σας πάρει πολύ χρόνο.</string>
@@ -653,6 +655,9 @@
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">Αποστολή μηνύματος;</string>
   <string name="UnverifiedSendDialog_send">Αποστολή</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_submit">Αποστολή</string>
+  <string name="UsernameEditFragment_delete">Διαγραφή</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Η επαφή σας χρησιμοποιεί παλιά έκδοση του Signal. Παρακαλούμε ζητήστε του/της να ανανεώσει την εφαρμογή πριν επιβεβαιώσετε το αριθμό ασφαλείας.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Η επαφή σας χρησιμοποιεί μια νεότερη έκδοση του Signal και ο κώδικας QR δεν έχει συμβατή μορφοποίηση. Παρακαλώ ενημερώστε την εφαρμογή.</string>
@@ -722,6 +727,7 @@
   <string name="NotificationChannel_other">Άλλο</string>
   <string name="NotificationChannel_group_messages">Μηνύματα</string>
   <string name="NotificationChannel_missing_display_name">Άγνωστο</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Η γρήγορη απάντηση δεν είναι διαθέσιμη όταν το Signal είναι κλειδωμένο!</string>
   <string name="QuickResponseService_problem_sending_message">Πρόβλημα με την αποστολή μηνύματος!</string>
@@ -736,6 +742,7 @@
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Νέο μήνυμα</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d αντικείμενο</item>
@@ -794,6 +801,7 @@
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">Το Signal χρειάζεται τα δικαιώματα Επαφών για να μπορούμε να εμφανίσουμε τις επαφές σας, αλλά αυτά δεν έχουν δοθεί μόνιμα. Παρακαλώ πηγαίνετε στις ρυθμίσεις εφαρμογών, επιλέξτε τα \"Δικαιώματα\", και ενεργοποιήστε τις \"Επαφές\".</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Σφάλμα κατά τη λήψη επαφών, ελέγξτε τη σύνδεσή σας στο δίκτυο</string>
+  <string name="ContactSelectionListFragment_okay">Εντάξει</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Καμία μπλοκαρισμένη επαφή</string>
   <!--contact_selection_list_fragment-->
@@ -1132,6 +1140,7 @@
   <string name="preferences_chats__when_roaming">Κατά το roaming</string>
   <string name="preferences_chats__media_auto_download">Αυτόματη λήψη πολυμέσων</string>
   <string name="preferences_chats__message_trimming">Περικοπή μηνυμάτων</string>
+  <string name="preferences_storage__audio">Ήχος</string>
   <string name="preferences_advanced__use_system_emoji">Χρήση emoji συστήματος</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Απενεργοποίηση της ενσωματωμένης υποστήριξης για emoji του Signal</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Αναμετάδοση όλων των κλήσεων μέσω του σέρβερ Signal για να αποφύγετε την αποκάλυψη της IP διεύθυνσής σας στην επαφή σας. Η ενεργοποίηση θα ρίξει την ποιότητα των κλήσεων.</string>
@@ -1172,6 +1181,7 @@
   <string name="conversation_context__menu_forward_message">Προώθηση μηνύματος</string>
   <string name="conversation_context__menu_resend_message">Αποστολή ξανά</string>
   <string name="conversation_context__menu_reply_to_message">Απαντήστε στο μήνυμα</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Αποθήκευση συνημμένου</string>
   <!--conversation_expiring_off-->
@@ -1253,8 +1263,6 @@
   <string name="media_preview__save_title">Αποθήκευση</string>
   <string name="media_preview__forward_title">Προώθηση</string>
   <string name="media_preview__all_media_title">Όλα τα πολυμέσα</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Δεν υπάρχουν έγγραφα</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Προεπισκόπιση</string>
   <!--new_conversation_activity-->
@@ -1361,5 +1369,8 @@
   <string name="RegistrationLockDialog_reminder">Υπενθύμιση:</string>
   <string name="recipient_preferences__about">Πληροφορίες</string>
   <string name="Recipient_unknown">Άγνωστο</string>
+  <string name="MessageRequestBottomView_accept">Αποδοχή</string>
+  <string name="MessageRequestBottomView_delete">Διαγραφή</string>
+  <string name="MessageRequestBottomView_block">Μπλοκάρισμα</string>
   <!--EOF-->
 </resources>
