--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -78,6 +78,8 @@
   <string name="BucketedThreadMedia_Yesterday">Včera</string>
   <string name="BucketedThreadMedia_This_week">Tento týden</string>
   <string name="BucketedThreadMedia_This_month">Tento měsíc</string>
+  <string name="BucketedThreadMedia_Large">Velké</string>
+  <string name="BucketedThreadMedia_Small">Malé</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Příchozí hovor</string>
   <!--CameraActivity-->
@@ -104,6 +106,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Nebyl nalezen žádný webový prohlížeč.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Telefonní hovor právě probíhá</string>
+  <string name="CommunicationActions_cancel">Storno</string>
+  <string name="CommunicationActions_call">Volat</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Váš bezpečnostní kód pro %1$s se změnil. To může znamenat, že se někdo pokouší zachytit vaši konverzaci, nebo jen že si %2$s přeinstaloval Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Možná budete chtít zkontrolovat vaše bezpečnostní kódy pro tento kontakt.</string>
@@ -430,23 +434,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">Chyba při čtení nastavení MMS</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Media</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="one">Smazat označenou zprávu?</item>
-    <item quantity="few">Smazat označené zprávy?</item>
-    <item quantity="many">Smazat označené zprávy?</item>
-    <item quantity="other">Smazat označené zprávy?</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="one">Tímto trvale smažete označenou zprávu.</item>
-    <item quantity="few">Tímto trvale smažete všechny %1$d označené zprávy.</item>
-    <item quantity="many">Tímto trvale smažete všech %1$d označených zpráv.</item>
-    <item quantity="other">Tímto trvale smažete všech %1$d označených zpráv.</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Mažu</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Mažu zprávy…</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Dokumenty</string> -->
   <string name="MediaOverviewActivity_Select_all">Označit vše</string>
   <string name="MediaOverviewActivity_collecting_attachments">Shromažďuji přílohy…</string>
+  <string name="MediaOverviewActivity_Audio">Zvuk</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Probíhá Signal volání</string>
   <string name="NotificationBarManager__establishing_signal_call">Navazuji Signal hovor</string>
@@ -544,6 +536,10 @@
   <string name="PlacePickerActivity_accept_address">Potvrdit adresu</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Verze služby Google Play, kterou máte nainstalovánu, nepracuje správně. Prosím, přeinstalujte službu Google Play a zkuste to znovu.</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">Uložit</string>
+  <!--ProfileEditOverviewFragment-->
+  <string name="ProfileEditOverviewFragment_profile">Profil</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Ohodnotit tuto aplikaci</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Pokud jste s aplikací spokojeni, prosím věnujte chvilku jejímu ohodnocení. Pomůže nám to.</string>
@@ -707,6 +703,9 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">Odeslat zprávu?</string>
   <string name="UnverifiedSendDialog_send">Odeslat</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_submit">Odeslat</string>
+  <string name="UsernameEditFragment_delete">Smazat</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Váš kontakt používá starou verzi aplikace Signal. Před kontrolou bezpečnostních kódů jej prosím požádejte, aby si aplikaci aktualizoval.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Váš kontakt používá novější verzi Signal s nekompatibilním formátem QR kódu. Prosím, aktualizujte svou verzi, abyste mohli QR kódy porovnat.</string>
@@ -777,6 +776,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="NotificationChannel_other">Ostatní</string>
   <string name="NotificationChannel_group_messages">Zprávy</string>
   <string name="NotificationChannel_missing_display_name">Neznámý</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Rychlá odpověď není dostupná, pokud je Signal uzamčen!</string>
   <string name="QuickResponseService_problem_sending_message">Problém při odesílání zprávy!</string>
@@ -791,6 +791,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Nová zpráva</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d Položka</item>
@@ -1217,6 +1218,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="preferences_chats__when_roaming">Při roamingu</string>
   <string name="preferences_chats__media_auto_download">Automatické stahování multimédií</string>
   <string name="preferences_chats__message_trimming">Ořezávání práv</string>
+  <string name="preferences_storage__audio">Zvuk</string>
   <string name="preferences_advanced__use_system_emoji">Použít systémové smajlíky</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Zakázat použití interních smajlíků aplikace Signal </string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Přenášet všechna volání přes servery Signal, aby nedošlo k odhalení vaší IP adresy volanému. Povolením dojde ke zhoršení kvality hovoru.</string>
@@ -1257,6 +1259,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="conversation_context__menu_forward_message">Přeposlat zprávu</string>
   <string name="conversation_context__menu_resend_message">Znovu poslat zprávu</string>
   <string name="conversation_context__menu_reply_to_message">Odpovědět na zprávu</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Uložit přílohu</string>
   <!--conversation_expiring_off-->
@@ -1341,8 +1344,6 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="media_preview__save_title">Uložit</string>
   <string name="media_preview__forward_title">Přeposlat</string>
   <string name="media_preview__all_media_title">Všechna media</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Žádné dokumenty</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Náhled multimedií</string>
   <!--new_conversation_activity-->
@@ -1453,5 +1454,8 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="RegistrationLockDialog_reminder">Připomínka:</string>
   <string name="recipient_preferences__about">Info o</string>
   <string name="Recipient_unknown">Neznámý</string>
+  <string name="MessageRequestBottomView_accept">Přijmout</string>
+  <string name="MessageRequestBottomView_delete">Smazat</string>
+  <string name="MessageRequestBottomView_block">Blokovat</string>
   <!--EOF-->
 </resources>
