--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -72,6 +72,8 @@
   <string name="BucketedThreadMedia_Yesterday">I går</string>
   <string name="BucketedThreadMedia_This_week">Denne uge</string>
   <string name="BucketedThreadMedia_This_month">Denne måned</string>
+  <string name="BucketedThreadMedia_Large">Stor</string>
+  <string name="BucketedThreadMedia_Small">Lille</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Indgående opkald</string>
   <!--CameraActivity-->
@@ -98,6 +100,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Ingen Webbrowser fundet</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Et netværksopkald er allerede igang</string>
+  <string name="CommunicationActions_cancel">Annuller</string>
+  <string name="CommunicationActions_call">Ring op</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Sikkerhedsnøglen for %1$s er blevet ændret. Dette kan enten betyde at nogen forsøger at opsnappe kommunikationen, eller at %2$s blot har geninstalleret Signal og nu har en ny sikkerhedsnøgle
     </string>
@@ -399,19 +403,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">Kunne ikke læse indstillinger for trådløs MMS udbyder</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Medie</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="one">Slet beskeder</item>
-    <item quantity="other">Slet beskeder?</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="one">d</item>
-    <item quantity="other">Dette sletter %1$d beskeder permanent</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Sletter</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Sletter beskeder…</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Dokumenter</string> -->
   <string name="MediaOverviewActivity_Select_all">Vælg alle</string>
   <string name="MediaOverviewActivity_collecting_attachments">Samler vedhæftninger…</string>
+  <string name="MediaOverviewActivity_Audio">Lyd</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal opkald i gang</string>
   <string name="NotificationBarManager__establishing_signal_call">Foretager Signalopkald</string>
@@ -508,6 +504,10 @@
   <string name="PlacePickerActivity_accept_address">Godkend adresse</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Din installerede version af Google Play tjenester virker ikke korrekt. Geninstallér venligst Google Play tjenester og prøv igen</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">Gem</string>
+  <!--ProfileEditOverviewFragment-->
+  <string name="ProfileEditOverviewFragment_profile">Profil</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Bedøm app\'en</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Hvis du kan lide at bruge app\'en, så hjælp os venligst ved at bedømme den</string>
@@ -675,6 +675,9 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">Send besked?</string>
   <string name="UnverifiedSendDialog_send">Send</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_submit">Send</string>
+  <string name="UsernameEditFragment_delete">Slet</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Din kontakt har en gammel version af Signal installeret. Bed ham om at opdatere inden i udveksler sikkerhedsnummer</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Din kontakt bruger en nyere version af Signal, med en inkompatibel QR kode. Opdatér venligst din app for at sammenligne</string>
@@ -745,6 +748,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="NotificationChannel_other">Andet</string>
   <string name="NotificationChannel_group_messages">Beskeder</string>
   <string name="NotificationChannel_missing_display_name">Ukendt</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Hurtig svar utilgængelig når Signal er låst!</string>
   <string name="QuickResponseService_problem_sending_message">Problem med at sende besked!</string>
@@ -759,6 +763,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Ny besked</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d Enheder</item>
@@ -1139,6 +1144,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Sletter automatisk ældre beskeder når antallet overstiger det specificerede</string>
   <string name="preferences__delete_old_messages">Slet gamle beskeder</string>
   <string name="preferences__chats">Chat og medier</string>
+  <string name="preferences__storage">Lager</string>
   <string name="preferences__conversation_length_limit">Grænse for samtaler</string>
   <string name="preferences__trim_all_conversations_now">Trim alle samtaler</string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Skan alle samtaler og tilpas begrænsninger for samtalelængde</string>
@@ -1167,6 +1173,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="preferences_chats__when_roaming">Ved roaming</string>
   <string name="preferences_chats__media_auto_download">Hent automatisk multimedier</string>
   <string name="preferences_chats__message_trimming">Trimning af beskeder</string>
+  <string name="preferences_storage__audio">Lyd</string>
   <string name="preferences_advanced__use_system_emoji">Anvend system emoji</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Deaktivér Signals indbyggede emoji understøttelse</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Videresend alle opkald gennem Signal serveren, for at undgå at afsløre din IP-adresse for din kontakt. Dette vil reducere opkaldskvaliteten</string>
@@ -1207,6 +1214,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="conversation_context__menu_forward_message">Videresend besked</string>
   <string name="conversation_context__menu_resend_message">Send besked igen</string>
   <string name="conversation_context__menu_reply_to_message">Svar på besked</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Gem vedhæftet fil</string>
   <!--conversation_expiring_off-->
@@ -1290,8 +1298,6 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="media_preview__save_title">Gem</string>
   <string name="media_preview__forward_title">Videresend</string>
   <string name="media_preview__all_media_title">Delte mediefiler</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Ingen dokumenter</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Medie eksempelvisning</string>
   <!--new_conversation_activity-->
@@ -1420,5 +1426,8 @@ Der er %d dage tilbage</string>
   <string name="RegistrationLockDialog_reminder">Påmindelse:</string>
   <string name="recipient_preferences__about">Om</string>
   <string name="Recipient_unknown">Ukendt</string>
+  <string name="MessageRequestBottomView_accept">Godkend</string>
+  <string name="MessageRequestBottomView_delete">Slet</string>
+  <string name="MessageRequestBottomView_block">Blokér</string>
   <!--EOF-->
 </resources>
