--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -72,6 +72,8 @@
   <string name="BucketedThreadMedia_Yesterday">Ayer</string>
   <string name="BucketedThreadMedia_This_week">Esta semana</string>
   <string name="BucketedThreadMedia_This_month">Este mes</string>
+  <string name="BucketedThreadMedia_Large">Grande</string>
+  <string name="BucketedThreadMedia_Small">Pequeña</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Llamada entrante</string>
   <!--CameraActivity-->
@@ -98,6 +100,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">No se ha encontrado un navegador web.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Hay una llamada en progreso en la red móvil.</string>
+  <string name="CommunicationActions_cancel">Cancelar</string>
+  <string name="CommunicationActions_call">Llamada</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Tus cifras de seguridad con %1$s han cambiado. Esto podría significar que o bien alguien está tratando de interceptar su comunicación, o que %2$s simplemente ha reinstalado Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Tal vez desees verificar tus cifras de seguridad con este contacto.</string>
@@ -106,6 +110,8 @@
   <string name="ContactsCursorLoader_recent_chats">Chats recientes</string>
   <string name="ContactsCursorLoader_contacts">Contactos</string>
   <string name="ContactsCursorLoader_groups">Grupos</string>
+  <string name="ContactsCursorLoader_phone_number_search">Buscar número de teléfono</string>
+  <string name="ContactsCursorLoader_username_search">Buscar usuario</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Mensaje %s</string>
   <string name="ContactsDatabase_signal_call_s">Llamar a %s por Signal</string>
@@ -398,19 +404,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">Fallo al leer la configuración MMS del proveedor</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Multimedia</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="one">¿Eliminar el mensaje seleccionado?</item>
-    <item quantity="other">¿Eliminar los mensajes seleccionados?</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="one">Esto eliminará permanentemente el mensaje seleccionado.</item>
-    <item quantity="other">Esto eliminará permanentemente los %1$d mensajes seleccionados.</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Eliminar</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Borrando mensajes …</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Documentos</string> -->
   <string name="MediaOverviewActivity_Select_all">Seleccionar todo</string>
   <string name="MediaOverviewActivity_collecting_attachments">Recopilando adjuntos …</string>
+  <string name="MediaOverviewActivity_Audio">Audio</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Llamada de Signal en curso</string>
   <string name="NotificationBarManager__establishing_signal_call">Estableciendo llamada de Signal</string>
@@ -507,6 +505,11 @@
   <string name="PlacePickerActivity_accept_address">Aceptar dirección</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">La versión de Google Play Services que has instalado no funciona correctamente. Por favor, reinstala Google Play Services e inténtalo de nuevo.</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">Guardar</string>
+  <!--ProfileEditOverviewFragment-->
+  <string name="ProfileEditOverviewFragment_profile">Perfil</string>
+  <string name="ProfileEditOverviewFragment_username">Nombre de usuario</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Valora esta aplicación</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Si disfrutas usando esta aplicación, por favor, tómate un momento para ayudarnos valorándola.</string>
@@ -675,6 +678,10 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">¿Enviar mensaje?</string>
   <string name="UnverifiedSendDialog_send">Enviar</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_username">Nombre de usuario</string>
+  <string name="UsernameEditFragment_submit">Enviar</string>
+  <string name="UsernameEditFragment_delete">Eliminar</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Tu contacto usa una versión antigua de Signal. Por favor, pídele que actualice antes de verificar las cifras de seguridad.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Tu contacto usa una versión de Signal con un formato de código QR incompatible. Por favor, pídele que actualice para verificar.</string>
@@ -745,6 +752,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="NotificationChannel_other">Otros</string>
   <string name="NotificationChannel_group_messages">Mensajes</string>
   <string name="NotificationChannel_missing_display_name">Desconocido</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">¡La respuesta rápida no está disponible cuando Signal está bloqueado!</string>
   <string name="QuickResponseService_problem_sending_message">¡Hubo un problema al enviar el mensaje!</string>
@@ -759,6 +767,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Nuevo mensaje</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d objeto</item>
@@ -824,6 +833,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">Signal necesita acceso a los contactos para mostrar los que usan Signal. Por favor, ve a la aplicación «Ajustes», selecciona Signal en el menú «Aplicaciones y notificaciones» y en «Permisos» activa «Contactos».</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Fallo al compilar contactos, comprueba la conexión a la red.</string>
+  <string name="ContactSelectionListFragment_okay">De acuerdo</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">No hay contactos bloqueados</string>
   <!--contact_selection_list_fragment-->
@@ -1139,6 +1149,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Elimina automáticamente los mensajes más antiguos cuando el chat exceda el límite de longitud especificado</string>
   <string name="preferences__delete_old_messages">Eliminar mensajes antiguos</string>
   <string name="preferences__chats">Chats y multimedia</string>
+  <string name="preferences__storage">Almacenamiento</string>
   <string name="preferences__conversation_length_limit">Límite de longitud de chat</string>
   <string name="preferences__trim_all_conversations_now">Recortar ahora todos los chats</string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Escanear todos lo chats e imponer los límites de longitud</string>
@@ -1167,6 +1178,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="preferences_chats__when_roaming">En itinerancia (roaming)</string>
   <string name="preferences_chats__media_auto_download">Auto-descarga de archivos multimedia</string>
   <string name="preferences_chats__message_trimming">Recorte de mensajes en chats</string>
+  <string name="preferences_storage__audio">Audio</string>
   <string name="preferences_advanced__use_system_emoji">Usar emoji del sistema</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Desactivar soporte de emoji integrado de Signal</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Redirige todas las llamadas a través del servidor de Signal para evitar revelar tu dirección IP al contacto. Activar la opción reducirá la calidad de las llamadas.</string>
@@ -1207,6 +1219,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="conversation_context__menu_forward_message">Reenviar mensaje</string>
   <string name="conversation_context__menu_resend_message">Reenviar mensaje</string>
   <string name="conversation_context__menu_reply_to_message">Responder al mensaje</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Guardar archivo adjunto</string>
   <!--conversation_expiring_off-->
@@ -1291,8 +1304,6 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="media_preview__save_title">Guardar</string>
   <string name="media_preview__forward_title">Avanzar</string>
   <string name="media_preview__all_media_title">Archivos multimedia</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">No hay documentos</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Previsualizar multimedia</string>
   <!--new_conversation_activity-->
@@ -1420,5 +1431,8 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="RegistrationLockDialog_reminder">Recordatorio:</string>
   <string name="recipient_preferences__about">Info</string>
   <string name="Recipient_unknown">Desconocido</string>
+  <string name="MessageRequestBottomView_accept">Aceptar</string>
+  <string name="MessageRequestBottomView_delete">Eliminar</string>
+  <string name="MessageRequestBottomView_block">Bloquear</string>
   <!--EOF-->
 </resources>
