--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -72,6 +72,8 @@
   <string name="BucketedThreadMedia_Yesterday">Atzo</string>
   <string name="BucketedThreadMedia_This_week">Aste honetan</string>
   <string name="BucketedThreadMedia_This_month">Hilabete honetan</string>
+  <string name="BucketedThreadMedia_Large">Handia</string>
+  <string name="BucketedThreadMedia_Small">Txikia</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Sarrerako dei</string>
   <!--CameraActivity-->
@@ -98,6 +100,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Ezin izan da nabigatzailerik aurkitu.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Dei zelular bat abian da dagoeneko</string>
+  <string name="CommunicationActions_cancel">Utzi</string>
+  <string name="CommunicationActions_call">Deitu</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">%1$skontaktuarekiko segurtasun zenbakia aldatu egin da. Honek ondokoa adierazi lezake: norbait zure komunikazioa atzematen saiatzen ari edo %2$skontaktuak Signal aplikazioa berrinstalatu du.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Agian zure segurasun zenbakia kontatu honekin baieztatu nahi duzu.</string>
@@ -398,19 +402,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">Errorea hari gabeko hornitzailearen MMS ezarpenak irakurtzerakoan</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Multimedia</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="one">Ezabatu aukeratutako mezua?</item>
-    <item quantity="other">Ezabatu aukeratutako mezuak?</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="one">Honek aukeratutako mezua behin betiko ezabatuko du.</item>
-    <item quantity="other">Honek aukeratutako %1$d mezuak behin betiko ezabatuko ditu.</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Ezabatzen</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Mezuak ezabatzen…</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Agiriak</string> -->
   <string name="MediaOverviewActivity_Select_all">Denak hautatu</string>
   <string name="MediaOverviewActivity_collecting_attachments">Eranskinak biltzen…</string>
+  <string name="MediaOverviewActivity_Audio">Audioa</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Uneko Signal deia</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal deia finkatzen</string>
@@ -507,6 +503,10 @@
   <string name="PlacePickerActivity_accept_address">Onartu helbidea</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Instalatutako Google Play Services bertsioa ez dabil ongi.  Berrinstalatu Google Play Services eta saiatu berriro mesedez.</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">Gorde</string>
+  <!--ProfileEditOverviewFragment-->
+  <string name="ProfileEditOverviewFragment_profile">Profila</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Ebaluatu aplikazio hau</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Aplikazio hau atsegin bazaizu, baloratu guri laguntzeko mesedez.</string>
@@ -675,6 +675,9 @@ Gakoaren elkar-trukeraro mezua jaso da protokoloaren bertsio baliogabe baterako.
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">Mezua bidali?</string>
   <string name="UnverifiedSendDialog_send">Bidali</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_submit">Bidali</string>
+  <string name="UsernameEditFragment_delete">Ezabatu</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Zure kontaktua Signal-en bertsio zahar bat erabiltzen ari da. Mesedez, eskatu iezaiozu eguneratzeko zure segurtasun zenbaki berria egiaztatu baino lehenago.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Zure kontaktua Signal aplikazioaren bertsio berriago bat erabiltzen ari da eta horrek QR kode formatua eguneratu du. Eguneratu konparazioa egiteko.</string>
@@ -745,6 +748,7 @@ Gakoaren elkar-trukeraro mezua jaso da protokoloaren bertsio baliogabe baterako.
   <string name="NotificationChannel_other">Besteak</string>
   <string name="NotificationChannel_group_messages">Mezuak</string>
   <string name="NotificationChannel_missing_display_name">Ezezaguna</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Erantzun bizkorra eskuraezina Signal blokeatuta badago!</string>
   <string name="QuickResponseService_problem_sending_message">Arazoa mezua bidaltzen!</string>
@@ -759,6 +763,7 @@ Gakoaren elkar-trukeraro mezua jaso da protokoloaren bertsio baliogabe baterako.
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Mezu berria</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">Elementu %d</item>
@@ -824,6 +829,7 @@ Gakoaren elkar-trukeraro mezua jaso da protokoloaren bertsio baliogabe baterako.
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">Singnalek Kontaktuen baimena behar du kontaktuak erakusteko baina ukatu egin diozu. Joan aplikazioaren ezarpenetara, aukeratu \"Baimenak\" eta aktibatu \"Kontaktuak\".</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Errorea kontaktuak jasotzean, egiaztatu zure konexioa.</string>
+  <string name="ContactSelectionListFragment_okay">Ados</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Blokeatutako kontaturik ez…</string>
   <!--contact_selection_list_fragment-->
@@ -1140,6 +1146,7 @@ Inportatu \'SMSBackup and Restorekin\' bateragarria den enkriptatu gabeko babesk
   <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Automatikoki ezabatu mezu zaharragoak solasaldiak luzera jakin bat gaindituz gero?</string>
   <string name="preferences__delete_old_messages">Mezu zaharrak ezabatu</string>
   <string name="preferences__chats">Txatak eta multimedia</string>
+  <string name="preferences__storage">Biltegia</string>
   <string name="preferences__conversation_length_limit">Solasaldiaren luzera muga</string>
   <string name="preferences__trim_all_conversations_now">Solasaldi guztien luzera murriztu orain</string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Eskaneatu solasaldi guztiak eta betearazi luzera mugak.</string>
@@ -1168,6 +1175,7 @@ Inportatu \'SMSBackup and Restorekin\' bateragarria den enkriptatu gabeko babesk
   <string name="preferences_chats__when_roaming">Ibiltaritzako datuak erabiltzerakoan</string>
   <string name="preferences_chats__media_auto_download">Multimedia edukien deskargatze automatikoa</string>
   <string name="preferences_chats__message_trimming">Mezu murrizketa </string>
+  <string name="preferences_storage__audio">Audioa</string>
   <string name="preferences_advanced__use_system_emoji">Erabili sistemaren emojiak</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Desaktibatu Signalen emoji integratuak</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Signal zerbizariren bitartez birtransmititu dei guztiak; horrela ez diozu erakutsiko zure IP helbidea kontaktuari. Gaitzeak deiaren kalitatea gutxiagotuko du.</string>
@@ -1208,6 +1216,7 @@ Inportatu \'SMSBackup and Restorekin\' bateragarria den enkriptatu gabeko babesk
   <string name="conversation_context__menu_forward_message">Birbidali mezua</string>
   <string name="conversation_context__menu_resend_message">Mezua berbidali</string>
   <string name="conversation_context__menu_reply_to_message">Erantzun mezuari</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Eraskina gorde</string>
   <!--conversation_expiring_off-->
@@ -1291,8 +1300,6 @@ Inportatu \'SMSBackup and Restorekin\' bateragarria den enkriptatu gabeko babesk
   <string name="media_preview__save_title">Gorde</string>
   <string name="media_preview__forward_title">Birbidali</string>
   <string name="media_preview__all_media_title">Euskarri guztiak</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Ez dago agiririk</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Multimediaren aurrebista</string>
   <!--new_conversation_activity-->
@@ -1420,5 +1427,8 @@ Inportatu \'SMSBackup and Restorekin\' bateragarria den enkriptatu gabeko babesk
   <string name="RegistrationLockDialog_reminder">Oroigarria:</string>
   <string name="recipient_preferences__about">Honi buruz</string>
   <string name="Recipient_unknown">Ezezaguna</string>
+  <string name="MessageRequestBottomView_accept">Onartu</string>
+  <string name="MessageRequestBottomView_delete">Ezabatu</string>
+  <string name="MessageRequestBottomView_block">Blokeatu</string>
   <!--EOF-->
 </resources>
