--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -72,6 +72,8 @@
   <string name="BucketedThreadMedia_Yesterday">Hier</string>
   <string name="BucketedThreadMedia_This_week">Cette semaine</string>
   <string name="BucketedThreadMedia_This_month">Ce mois</string>
+  <string name="BucketedThreadMedia_Large">Grande</string>
+  <string name="BucketedThreadMedia_Small">Petite</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Appel entrant</string>
   <!--CameraActivity-->
@@ -98,6 +100,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Aucun navigateur Web n’a été trouvé.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Un appel cellulaire est déjà en cours.</string>
+  <string name="CommunicationActions_cancel">Annuler</string>
+  <string name="CommunicationActions_call">Appeler</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Votre numéro de sécurité avec %1$s a changé. Cela pourrait signifier soit que quelqu’un tente d’intercepter votre communication, soit que %2$s a simplement réinstallé Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Vous voudrez peut-être vérifier votre numéro de sécurité avec ce contact.</string>
@@ -106,6 +110,8 @@
   <string name="ContactsCursorLoader_recent_chats">Conversations récentes</string>
   <string name="ContactsCursorLoader_contacts">Contacts</string>
   <string name="ContactsCursorLoader_groups">Groupes</string>
+  <string name="ContactsCursorLoader_phone_number_search">Recherche par numéro de téléphone</string>
+  <string name="ContactsCursorLoader_username_search">Recherche par identifiant</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Message %s</string>
   <string name="ContactsDatabase_signal_call_s">Appel Signal %s</string>
@@ -393,19 +399,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">Erreur de lecture des paramètres de message multimédia du fournisseur sans fil</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Médias</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="one">Supprimer le message sélectionné ?</item>
-    <item quantity="other">Supprimer les messages sélectionnés ?</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="one">Cela supprimera définitivement le message sélectionné.</item>
-    <item quantity="other">Cela supprimera définitivement les %1$d messages sélectionnés.</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Suppression</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Suppression des messages…</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Documents</string> -->
   <string name="MediaOverviewActivity_Select_all">Tout sélectionner</string>
   <string name="MediaOverviewActivity_collecting_attachments">Récupération des pièces jointes…</string>
+  <string name="MediaOverviewActivity_Audio">Son</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Appel Signal en cours</string>
   <string name="NotificationBarManager__establishing_signal_call">Établissement de l’appel Signal</string>
@@ -502,6 +500,11 @@
   <string name="PlacePickerActivity_accept_address">Accepter l’adresse</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">La version des services Google Play que vous avez installée ne fonctionne pas correctement. Veuillez réinstaller les Services Google Play et ressayer.</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">Enregistrer</string>
+  <!--ProfileEditOverviewFragment-->
+  <string name="ProfileEditOverviewFragment_profile">Profil</string>
+  <string name="ProfileEditOverviewFragment_username">Identifiant</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Notez cette appli</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Si vous aimez cette appli, veuillez prendre quelques instants pour nous aider en l’évaluant.</string>
@@ -664,6 +667,10 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">Envoyer le message ?</string>
   <string name="UnverifiedSendDialog_send">Envoyer</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_username">Identifiant</string>
+  <string name="UsernameEditFragment_submit">Envoyer</string>
+  <string name="UsernameEditFragment_delete">Supprimer</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Votre contact utilise une ancienne version de Signal. Veuillez lui demander de la mettre à jour avant de vérifier votre numéro de sécurité.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Votre contact utilise une version plus récente de Signal dont le format de code QR est incompatible. Veuillez mettre Signal à jour pour comparer.</string>
@@ -733,6 +740,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="NotificationChannel_other">Autre</string>
   <string name="NotificationChannel_group_messages">Messages</string>
   <string name="NotificationChannel_missing_display_name">Inconnu</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">La réponse rapide n’est pas proposée quand Signal est verrouillée !</string>
   <string name="QuickResponseService_problem_sending_message">Erreur lors de l’envoi du message !</string>
@@ -747,6 +755,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Nouveau message</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%délément</item>
@@ -812,6 +821,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">Signal exige l’autorisation Contacts afin d’afficher vos contacts, mais elle a été refusée définitivement. Veuillez accéder au menu des paramètres des applis, sélectionner « Autorisations » et activer « Contacts ».</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Erreur de récupération des contacts, veuillez vérifier votre connexion réseau</string>
+  <string name="ContactSelectionListFragment_okay">D’accord</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Aucun contact n’est bloqué</string>
   <!--contact_selection_list_fragment-->
@@ -1127,6 +1137,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Supprimer automatiquement les messages plus anciens dès qu’une conversation dépasse une certaine longueur</string>
   <string name="preferences__delete_old_messages">Supprimer les anciens messages</string>
   <string name="preferences__chats">Conversations et médias</string>
+  <string name="preferences__storage">Stockage</string>
   <string name="preferences__conversation_length_limit">Limite de taille des conversations</string>
   <string name="preferences__trim_all_conversations_now">Réduire toutes les conversations maintenant</string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Analyser toutes les conversations et imposer des limites de longueur de conversation</string>
@@ -1155,6 +1166,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="preferences_chats__when_roaming">En itinérance</string>
   <string name="preferences_chats__media_auto_download">Téléchargement automatique des médias</string>
   <string name="preferences_chats__message_trimming">Élagage des messages</string>
+  <string name="preferences_storage__audio">Son</string>
   <string name="preferences_advanced__use_system_emoji">Utiliser les émojis du système</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Désactiver la prise en charge des émojis intégrés à Signal</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Relayer tous les appels par le serveur Signal pour éviter de divulguer votre adresse IP à votre contact. L’activation de cette option réduira la qualité des appels.</string>
@@ -1195,6 +1207,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="conversation_context__menu_forward_message">Transférer le message</string>
   <string name="conversation_context__menu_resend_message">Renvoyer le message</string>
   <string name="conversation_context__menu_reply_to_message">Répondre au message</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Enregistrer la pièce jointe</string>
   <!--conversation_expiring_off-->
@@ -1278,8 +1291,6 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="media_preview__save_title">Enregistrer</string>
   <string name="media_preview__forward_title">Transférer</string>
   <string name="media_preview__all_media_title">Tous les médias</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Aucun document</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Aperçu du média</string>
   <!--new_conversation_activity-->
@@ -1389,5 +1400,8 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="RegistrationLockDialog_reminder">Rappel :</string>
   <string name="recipient_preferences__about">À propos de Signal</string>
   <string name="Recipient_unknown">Inconnu</string>
+  <string name="MessageRequestBottomView_accept">Accepter</string>
+  <string name="MessageRequestBottomView_delete">Supprimer</string>
+  <string name="MessageRequestBottomView_block">Bloquer</string>
   <!--EOF-->
 </resources>
