--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -72,6 +72,8 @@
   <string name="BucketedThreadMedia_Yesterday">कल</string>
   <string name="BucketedThreadMedia_This_week">इस सप्ताह</string>
   <string name="BucketedThreadMedia_This_month">इस महीना</string>
+  <string name="BucketedThreadMedia_Large">बड़ा</string>
+  <string name="BucketedThreadMedia_Small">छोटा</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">आने वाली कॉल</string>
   <!--CameraActivity-->
@@ -98,6 +100,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">कोई वेब ब्राउजर नहीं मिला।</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">एक सेलुलर कॉल प्रगति में है।</string>
+  <string name="CommunicationActions_cancel">रद्द करें</string>
+  <string name="CommunicationActions_call">कॉल</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">%1$s के साथ आपका सुरक्षा नंबर बदल गया है। इसका मतलब यह हो सकता है कि कोई आपके संचार को रोकने की कोशिश कर रहा है, या उस %2$s ने Signal को फिर से इंस्टॉल किया है।</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">आप इस संपर्क के साथ अपना सुरक्षा नंबर सत्यापित करना चाह सकते हैं।</string>
@@ -106,6 +110,8 @@
   <string name="ContactsCursorLoader_recent_chats">नवीनतम बातचीत </string>
   <string name="ContactsCursorLoader_contacts">संपर्क</string>
   <string name="ContactsCursorLoader_groups">समूह </string>
+  <string name="ContactsCursorLoader_phone_number_search">फ़ोन नंबर खोजें</string>
+  <string name="ContactsCursorLoader_username_search">उपयोगकर्ता का नाम खोजें</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">%s को संदेश</string>
   <string name="ContactsDatabase_signal_call_s">%s को Signal कॉल</string>
@@ -398,19 +404,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">वायरलेस प्रदाता SMS सेटिंग्स पढ़ने में त्रुटि</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">मीडिया</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="one">चयनित मेसेज हटाएं?</item>
-    <item quantity="other">चयनित मेसेज हटाएं?</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="one">यह चयनित वार्तालापों को स्थायी रूप से हटा देगा।</item>
-    <item quantity="other">यह सभी %1$d चयनित वार्तालापों को स्थायी रूप से हटा देगा।</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">हटाना</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">मेसेज हटाए जा रहे हैं</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">दस्तावेज़</string> -->
   <string name="MediaOverviewActivity_Select_all">सभी को चुन लो</string>
   <string name="MediaOverviewActivity_collecting_attachments">अटैचमेंट्स सहेज रहें हैं</string>
+  <string name="MediaOverviewActivity_Audio">ऑडियो</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal कॉल प्रगति पर है</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal कॉल की स्थापना की जा रही है</string>
@@ -506,6 +504,11 @@
   <string name="PlacePickerActivity_accept_address">पता स्वीकारें</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">आपके द्वारा इंस्टॉल की गई Google Play सेवाओं का वर्ज़न सही ढंग से कार्य नहीं कर रहा है। कृपया Google Play सेवाओं को पुनर्स्थापित करें और पुनः प्रयास करें।</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">सेव</string>
+  <!--ProfileEditOverviewFragment-->
+  <string name="ProfileEditOverviewFragment_profile">प्रोफ़ाइल</string>
+  <string name="ProfileEditOverviewFragment_username">उपयोगकर्ता नाम</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">इस ऐप्लिकेशन को रेट करें</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">यदि आप इस ऐप का उपयोग करने का आनंद लेते हैं, तो कृपया इसे रेटिंग करके हमारी सहायता करने के लिए कुछ समय दें।</string>
@@ -667,6 +670,10 @@
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">मेसेज भेजें?</string>
   <string name="UnverifiedSendDialog_send">भेजें</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_username">उपयोगकर्ता नाम</string>
+  <string name="UsernameEditFragment_submit">सबमिट</string>
+  <string name="UsernameEditFragment_delete">हटाए </string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">आपका संपर्क Signal का पुराना वर्ज़न चला रहा है। कृपया अपनी सुरक्षा संख्या सत्यापित करने से पहले उन्हें अपडेट करने के लिए कहें।</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">आपका संपर्क एक असंगत क्यूआर कोड ड्राफ्ट के साथ Signal का एक नया वर्ज़न चला रहा है। तुलना करने के लिए कृपया अपडेट करें।</string>
@@ -737,6 +744,7 @@
   <string name="NotificationChannel_other">अन्य</string>
   <string name="NotificationChannel_group_messages">मेसेज</string>
   <string name="NotificationChannel_missing_display_name">अनजान</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Signal लॉक होने पर त्वरित प्रतिक्रिया अनुपलब्ध है!</string>
   <string name="QuickResponseService_problem_sending_message">मेसेज भेजने में दिक्कत हुआ </string>
@@ -751,6 +759,7 @@
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">नया Signal मेसेज</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%dचीज़ें</item>
@@ -816,6 +825,7 @@
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">Signal को आपके संपर्कों को प्रदर्शित करने के लिए संपर्क अनुमति की आवश्यकता होती है, लेकिन इसे स्थायी रूप से अस्वीकार कर दिया गया है। कृपया ऐप सेटिंग्स मेनू पर जारी रखें, \"अनुमतियां\" चुनें, और \"संपर्क\" सक्षम करें।</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">संपर्क पुनर्प्राप्त करने में त्रुटि, अपना नेटवर्क कनेक्शन जांचें</string>
+  <string name="ContactSelectionListFragment_okay">ठीक है</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">कोई अवरुद्ध संपर्क नहीं</string>
   <!--contact_selection_list_fragment-->
@@ -1159,6 +1169,7 @@
   <string name="preferences_chats__when_roaming">रोमिंग करते समय</string>
   <string name="preferences_chats__media_auto_download">मीडिया ऑटो डाउनलोड</string>
   <string name="preferences_chats__message_trimming">मेसेज ट्रिमिंग</string>
+  <string name="preferences_storage__audio">ऑडियो</string>
   <string name="preferences_advanced__use_system_emoji">सिस्टम इमोजी का प्रयोग करें</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Signal के अंतर्निहित इमोजी समर्थन को अक्षम करें</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">अपने संपर्क में अपने IP ऐड्रेस को प्रकट करने से बचने के लिए Signal सर्वर के माध्यम से सभी कॉल रिले करें। सक्षम करने से कॉल गुणवत्ता कम हो जाएगी।</string>
@@ -1199,6 +1210,7 @@
   <string name="conversation_context__menu_forward_message">फॉर्वर्ड मेसिज</string>
   <string name="conversation_context__menu_resend_message">मेसेज दोबारा भेजें</string>
   <string name="conversation_context__menu_reply_to_message">मेसेज का जवाब</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">अटैचमेंट सेव करे</string>
   <!--conversation_expiring_off-->
@@ -1282,8 +1294,6 @@
   <string name="media_preview__save_title">सेव</string>
   <string name="media_preview__forward_title">आगे भेजें</string>
   <string name="media_preview__all_media_title">सभी मीडिया</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">कोई दस्तावेज़ नहीं</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">मीडिया प्रिव्यु</string>
   <!--new_conversation_activity-->
@@ -1415,5 +1425,8 @@ Locale: %4$s</string>
   <string name="RegistrationLockDialog_reminder">रिमाइन्डर:</string>
   <string name="recipient_preferences__about">हमारे बारे में</string>
   <string name="Recipient_unknown">अनजान</string>
+  <string name="MessageRequestBottomView_accept">स्वीकृत </string>
+  <string name="MessageRequestBottomView_delete">हटाए </string>
+  <string name="MessageRequestBottomView_block">ब्लॉक</string>
   <!--EOF-->
 </resources>
