--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -73,6 +73,8 @@
   <string name="BucketedThreadMedia_Yesterday">Jučer</string>
   <string name="BucketedThreadMedia_This_week">Ovaj tjedan</string>
   <string name="BucketedThreadMedia_This_month">Ovaj mjesec</string>
+  <string name="BucketedThreadMedia_Large">Velika</string>
+  <string name="BucketedThreadMedia_Small">Mala</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Dolazni poziv</string>
   <!--CameraActivity-->
@@ -95,6 +97,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Web pretraživać nije pronađen.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Mobilni poziv već je u tijeku.</string>
+  <string name="CommunicationActions_cancel">Odustani</string>
+  <string name="CommunicationActions_call">Poziv</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Vaš sigurnosni broj za %1$s je izmjenjen. Ovo može značiti da netko pokušava presresti vašu komunikaciju ili da je %2$s jednostavno ponovno instalirao Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Možda biste trebali provjeriti sigurnosni broj za ovaj kontakt.</string>
@@ -401,21 +405,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">Greška pri čitanju MMS postavki od operatera</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Medij</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="one">Izbriši označenu poruku?</item>
-    <item quantity="few">Izbriši označene poruke?</item>
-    <item quantity="other">Izbriši označene poruke?</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="one">Ovo će trajno obrisati označenu poruku.</item>
-    <item quantity="few">Broj poruka koji će biti trajno izbrisan: %1$d</item>
-    <item quantity="other">Broj poruka koji će biti trajno izbrisan: %1$d</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Brisanje</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Brisanje poruka…</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Dokumenti</string> -->
   <string name="MediaOverviewActivity_Select_all">Odaberi sve</string>
   <string name="MediaOverviewActivity_collecting_attachments">Prikupljanje privitaka…</string>
+  <string name="MediaOverviewActivity_Audio">Zvuk</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal poziv u tijeku</string>
   <string name="NotificationBarManager__establishing_signal_call">Uspostavljanje Signal poziva</string>
@@ -512,6 +506,10 @@
   <string name="PlacePickerActivity_accept_address">Prihvati adresu</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Google Play Services intalirana inačica ne radi ispravno. Ponovno instalirajte Google Play Services i pokušajte ponovno.</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">Spremi</string>
+  <!--ProfileEditOverviewFragment-->
+  <string name="ProfileEditOverviewFragment_profile">Profil</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Ocijenite ovu aplikaciju</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Ukoliko volite koristiti ovu aplikaciju, odvojite trenutak kako biste nam pomogli svojom ocjenom.</string>
@@ -673,6 +671,9 @@ Primljena poruka razmjene ključeva za pogrešnu inačicu protokola.</string>
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">Pošalji poruku?</string>
   <string name="UnverifiedSendDialog_send">Pošalji</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_submit">Pošalji</string>
+  <string name="UsernameEditFragment_delete">Obriši</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Vaš kontakt koristi stariju Signal inačicu. Zamolite ih da ažuriraju Signal prije provjere sigurnosnog broja.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Vaš kontakt koristi noviju Signal inačicu s nekompatibilnim QR kod oblikom. Ažurirajte vašu inačicu kako biste usporedili.</string>
@@ -742,6 +743,7 @@ Primljena poruka razmjene ključeva za pogrešnu inačicu protokola.</string>
   <string name="NotificationChannel_other">Ostalo</string>
   <string name="NotificationChannel_group_messages">Poruke</string>
   <string name="NotificationChannel_missing_display_name">Nepoznato</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Brzi odgovor nije dostupan kada je Signal zaključan!</string>
   <string name="QuickResponseService_problem_sending_message">Greška prilikom slanja poruke!</string>
@@ -756,6 +758,7 @@ Primljena poruka razmjene ključeva za pogrešnu inačicu protokola.</string>
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Nova poruka</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d Stavka</item>
@@ -1133,6 +1136,7 @@ Uvezi nekriptiranu kopiju. Kompatibilno s \'SMSBackup And Restore\'.</string>
   <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Automatski obriši starije poruke nakon što razgovor pređe određenu duljinu</string>
   <string name="preferences__delete_old_messages">Obriši stare poruke</string>
   <string name="preferences__chats">Razgovori i media</string>
+  <string name="preferences__storage">Pohrana</string>
   <string name="preferences__conversation_length_limit">Maksimalna duljina razgovora</string>
   <string name="preferences__trim_all_conversations_now">Skrati sve razgovore odmah</string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Skeniraj sve razgovore i primijeni ograničenje duljine razgovora</string>
@@ -1160,6 +1164,7 @@ Uvezi nekriptiranu kopiju. Kompatibilno s \'SMSBackup And Restore\'.</string>
   <string name="preferences_chats__when_roaming">Prilikom roaminga</string>
   <string name="preferences_chats__media_auto_download">Automatsko preuzimanje media sadržaja</string>
   <string name="preferences_chats__message_trimming">Skraćivanje poruke</string>
+  <string name="preferences_storage__audio">Zvuk</string>
   <string name="preferences_advanced__use_system_emoji">Koristi emotikone sustava</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Onemogući ugrađenu Signal podršku za emotikone</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Preusmjeri sve pozive kroz Signal poslužitelj kako biste izbjegli otkrivanje svoje IP adrese vašem kontaktu. Ukoliko ovo omogućite smanjit će se kvaliteta poziva.</string>
@@ -1200,6 +1205,7 @@ Uvezi nekriptiranu kopiju. Kompatibilno s \'SMSBackup And Restore\'.</string>
   <string name="conversation_context__menu_forward_message">Proslijedi poruku</string>
   <string name="conversation_context__menu_resend_message">Ponovno pošalji poruku</string>
   <string name="conversation_context__menu_reply_to_message">Odgovori na poruku</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Spremi privitak</string>
   <!--conversation_expiring_off-->
@@ -1281,8 +1287,6 @@ Uvezi nekriptiranu kopiju. Kompatibilno s \'SMSBackup And Restore\'.</string>
   <string name="media_preview__save_title">Spremi</string>
   <string name="media_preview__forward_title">Naprijed</string>
   <string name="media_preview__all_media_title">Svi mediji</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Nema dokumenata</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Prikaz medija</string>
   <!--new_conversation_activity-->
@@ -1389,5 +1393,8 @@ Uvezi nekriptiranu kopiju. Kompatibilno s \'SMSBackup And Restore\'.</string>
   <string name="RegistrationLockDialog_reminder">Podsjetnik:</string>
   <string name="recipient_preferences__about">O aplikaciji</string>
   <string name="Recipient_unknown">Nepoznato</string>
+  <string name="MessageRequestBottomView_accept">Prihvati</string>
+  <string name="MessageRequestBottomView_delete">Obriši</string>
+  <string name="MessageRequestBottomView_block">Blokiraj</string>
   <!--EOF-->
 </resources>
