--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -66,6 +66,8 @@
   <string name="BucketedThreadMedia_Yesterday">어제</string>
   <string name="BucketedThreadMedia_This_week">이번주</string>
   <string name="BucketedThreadMedia_This_month">이번달</string>
+  <string name="BucketedThreadMedia_Large">크게</string>
+  <string name="BucketedThreadMedia_Small">작게</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">수신통화</string>
   <!--CameraActivity-->
@@ -79,6 +81,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">웹 브라우저를 찾을 수 없습니다.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">이미 통신사 무선망 전화를 사용하고 있습니다.</string>
+  <string name="CommunicationActions_cancel">취소</string>
+  <string name="CommunicationActions_call">전화</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">%1$s의 안전 번호가 변경되었습니다. 누군가가 연결을 가로채려 시도하고 있거나 단순히 %2$s(이)가 Signal을 다시 설치한 것일 수도 있습니다. </string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">이 연락처와의 안전 번호를 검증해보세요.</string>
@@ -359,17 +363,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">이동통신사 MMS 설정 읽기 오류 발생</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">매체</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="other">선택된 메시지들을 삭제할까요?</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="other">%1$d 의 선택된 메시지들을 영구적으로 삭제합니다.</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">이전 메시지 삭제</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">메시지를 삭제 중…</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">문서들</string> -->
   <string name="MediaOverviewActivity_Select_all">모두 선택</string>
   <string name="MediaOverviewActivity_collecting_attachments">첨부파일 저장 준비 중…</string>
+  <string name="MediaOverviewActivity_Audio">오디오</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal 통화 중</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal 통화 연결 중</string>
@@ -454,6 +452,9 @@
   <string name="PlacePickerActivity_title">지도</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">설치된 Google Play 서비스 버전은 제대로 작동하지 않습니다. Google Play 서비스를 재설치 하고 다시 시도해 주세요.</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">저장</string>
+  <!--ProfileEditOverviewFragment-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">앱 평가</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">앱이 마음에 들면 평가해 주시면 좋겠습니다.</string>
@@ -606,6 +607,9 @@
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">메시지를 보내시겠습니까?</string>
   <string name="UnverifiedSendDialog_send">보내기</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_submit">제출</string>
+  <string name="UsernameEditFragment_delete">삭제</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">해당 연락처는 오래된 버전의 Signal을 쓰고 있습니다. 안전 번호를 검증하기 전에 먼저 업데이트를 요청하세요.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">해당 연락처는 상위 버전 Signal의 호환되지 않는 QR 코드 형식을 사용하고 있습니다. 앱을 업데이트하세요.</string>
@@ -674,6 +678,7 @@
   <string name="NotificationChannel_other">기타</string>
   <string name="NotificationChannel_group_messages">메시지</string>
   <string name="NotificationChannel_missing_display_name">알 수 없음</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Signal 잠겨 있는 경우 빠른 응답 사용할 수 없음</string>
   <string name="QuickResponseService_problem_sending_message">메시지 보내지 못함</string>
@@ -688,6 +693,7 @@
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">새 메시지</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="other">항목 %d개</item>
@@ -1076,6 +1082,7 @@
   <string name="preferences_chats__when_roaming">로밍할 때</string>
   <string name="preferences_chats__media_auto_download">미디어 자동 다운로드</string>
   <string name="preferences_chats__message_trimming">대화 줄이기</string>
+  <string name="preferences_storage__audio">오디오</string>
   <string name="preferences_advanced__use_system_emoji">시스템 이모티콘 사용</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Signal 이모티콘 사용 중지</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">연락하는 이에게 IP 주소를 알려주지 않도록 모든 통화를 Signal 서버로 중계합니다. 통화 품질이 떨어질 수 있습니다.</string>
@@ -1116,6 +1123,7 @@
   <string name="conversation_context__menu_forward_message">메시지 전달</string>
   <string name="conversation_context__menu_resend_message">메시지 다시 보내기</string>
   <string name="conversation_context__menu_reply_to_message">메시지 답장</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">첨부파일 저장</string>
   <!--conversation_expiring_off-->
@@ -1195,8 +1203,6 @@
   <string name="media_preview__save_title">저장</string>
   <string name="media_preview__forward_title">전달</string>
   <string name="media_preview__all_media_title">모든 미디어</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">문서 없음</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">미디어 미리보기</string>
   <!--new_conversation_activity-->
@@ -1304,5 +1310,8 @@
   <string name="RegistrationLockDialog_reminder">리마인더:</string>
   <string name="recipient_preferences__about">정보</string>
   <string name="Recipient_unknown">알 수 없음</string>
+  <string name="MessageRequestBottomView_accept">수락</string>
+  <string name="MessageRequestBottomView_delete">삭제</string>
+  <string name="MessageRequestBottomView_block">차단</string>
   <!--EOF-->
 </resources>
