--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -75,6 +75,8 @@
   <string name="BucketedThreadMedia_Yesterday">Vakar</string>
   <string name="BucketedThreadMedia_This_week">Šonedēļ</string>
   <string name="BucketedThreadMedia_This_month">Šomēnes</string>
+  <string name="BucketedThreadMedia_Large">Liels</string>
+  <string name="BucketedThreadMedia_Small">Mazs</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Ienākošš zvans</string>
   <!--CameraActivity-->
@@ -100,6 +102,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Neizdevās atrast interneta pārlūku.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Mobilais zvans jau notiek.</string>
+  <string name="CommunicationActions_cancel">Atcelt</string>
+  <string name="CommunicationActions_call">Zvanīt</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Jūsu drošības numurs ar %1$s ir mainījies. Tas nozīmē ka kāds mēģina noklausīties jūsu saziņu, vai arī ka %2$s vienkārši pārinstalēja Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Iespējams, Jūs vēlaties salīdzināt savu drošības numuru ar šo kontaktu.</string>
@@ -408,21 +412,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">Neizdevās nolasīt mobilo pakalpojumu sniedzēja MMS uzstādījumus</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Multivide</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="zero">Izdzēst izvēlētās ziņas?</item>
-    <item quantity="one">Izdzēst Izvēlēto ziņu?</item>
-    <item quantity="other">Izdzēst izvēlēt\as ziņas?</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="zero">Šis neatgriezeniski izdzēsīs visas %1$d atzīmētās ziņas.</item>
-    <item quantity="one">Šis neatgriezeniski izdzēsīs atzīmēto ziņu.</item>
-    <item quantity="other">Šis neatgriezeniski izdzēsīs visas%1$d atzīmētās ziņas.</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Dzēš</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Dzēš ziņas…</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Dokumenti</string> -->
   <string name="MediaOverviewActivity_Select_all">Izvēlēties visu</string>
   <string name="MediaOverviewActivity_collecting_attachments">Apkopo pielikumus…</string>
+  <string name="MediaOverviewActivity_Audio">Audio</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Notiek Signal zvans </string>
   <string name="NotificationBarManager__establishing_signal_call">Signal zvana izveide</string>
@@ -519,6 +513,9 @@
   <string name="PlacePickerActivity_accept_address">Pieņemt adresi</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Jūsu Google Play Services instalētā versija nefunkcionē pareizi. Lūdzu pārinstalējiet Google Play Services un mēģiniet vēlreiz.</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">Saglabāt</string>
+  <!--ProfileEditOverviewFragment-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Novērtējiet šo lietotni</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Ja jums patīk izmantot šo programmu, lūdzu, palīdziet mums, veltot īsu brīdi, lai to novērtētu.</string>
@@ -679,6 +676,9 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">Sūtīt ziņu?</string>
   <string name="UnverifiedSendDialog_send">Sūtīt</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_submit">Iesniegt</string>
+  <string name="UsernameEditFragment_delete">Dzēst</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Jūsu kontaktpersona izmanto vecu Signal versiju. Lūdzu palūdziet, lai atjauno, pirms apstipriniet drošības numuru.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Jūsu kontaktpersona izmanto jaunāku Signal versiju, ar nesaderīgu QR koda formātu. Lūdzu atjaunojiet, lai salīdzinātu.</string>
@@ -748,6 +748,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="NotificationChannel_other">Cits</string>
   <string name="NotificationChannel_group_messages">Ziņas</string>
   <string name="NotificationChannel_missing_display_name">Nezināms</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Atrās atbildes nav pieejamas, kad Signal ir bloķēts!</string>
   <string name="QuickResponseService_problem_sending_message">Problēma sūtot ziņu!</string>
@@ -762,6 +763,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Jauna ziņa</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="zero"> %d priekšmeti</item>
@@ -1173,6 +1175,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="preferences_chats__when_roaming">Izmantojot viesabonēšanau</string>
   <string name="preferences_chats__media_auto_download">Multivides automātiskā lejupielāde</string>
   <string name="preferences_chats__message_trimming">Ziņu apgriešana</string>
+  <string name="preferences_storage__audio">Audio</string>
   <string name="preferences_advanced__use_system_emoji">Lietot sistēmas emoji</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Izslēgt Signāla emoji (smaidiņus)</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Pārraidiet visus zvanus caur Signal serveri, lai izvairītos no IP adreses atklāšanas kontaktpersonai. Aktivizēšana samazinās zvanu kvalitāti.</string>
@@ -1213,6 +1216,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="conversation_context__menu_forward_message">Pārsūtīt ziņu</string>
   <string name="conversation_context__menu_resend_message">Atkārtoti sūtīt ziņu</string>
   <string name="conversation_context__menu_reply_to_message">Atbildēt ziņai</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Saglabāt pielikumu</string>
   <!--conversation_expiring_off-->
@@ -1296,8 +1300,6 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="media_preview__save_title">Saglabāt</string>
   <string name="media_preview__forward_title">Uz priekšu</string>
   <string name="media_preview__all_media_title">Visa multivide</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Nav dokumentu</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Multivides priekšskatījums</string>
   <!--new_conversation_activity-->
@@ -1404,5 +1406,8 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="RegistrationLockDialog_reminder">Atgādinājums:</string>
   <string name="recipient_preferences__about">Par</string>
   <string name="Recipient_unknown">Nezināms</string>
+  <string name="MessageRequestBottomView_accept">Apstiprināt</string>
+  <string name="MessageRequestBottomView_delete">Dzēst</string>
+  <string name="MessageRequestBottomView_block">Bloķēt</string>
   <!--EOF-->
 </resources>
