--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -72,6 +72,8 @@
   <string name="BucketedThreadMedia_Yesterday">काल</string>
   <string name="BucketedThreadMedia_This_week">ह्या आवठवड्यात</string>
   <string name="BucketedThreadMedia_This_month">ह्या महिन्यात</string>
+  <string name="BucketedThreadMedia_Large">मोठे</string>
+  <string name="BucketedThreadMedia_Small">छोटे</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">येणारा कॉल</string>
   <!--CameraActivity-->
@@ -98,6 +100,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">कुठलाही वेब ब्राऊझर सापडला नाही.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">एक सेल्यूलर कॉल प्रगतीमध्ये आहे.</string>
+  <string name="CommunicationActions_cancel">रद्द करा</string>
+  <string name="CommunicationActions_call">कॉल करा</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">%1$s सोबतचा आपला सुरक्षितता नंबर बदलला आहे. ह्याचा अर्थ कुणीतरी आपले परस्परसंवादामध्ये अटकाव करण्याचा प्रयत्न करतो आहे किंवा %2$s याने Signal पुनर्स्थापित केले आहे असा होऊ शकतो.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">या संपर्कासोबत आपल्याला आपला सुरक्षितता नंबर सत्यापित करावेसे वाटू शकते.</string>
@@ -106,6 +110,8 @@
   <string name="ContactsCursorLoader_recent_chats">अलीकडील चॅट</string>
   <string name="ContactsCursorLoader_contacts">संपर्क</string>
   <string name="ContactsCursorLoader_groups">गट</string>
+  <string name="ContactsCursorLoader_phone_number_search">फोन नंबर शोध</string>
+  <string name="ContactsCursorLoader_username_search">वापरकर्तानाव शोध</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">संदेश %s</string>
   <string name="ContactsDatabase_signal_call_s">Signal कॉल %s</string>
@@ -398,19 +404,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">वायरलेस प्रदाता MMS सेटिंग वाचण्यात त्रुटी</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">मीडिया</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="one">निवडलेला संदेश हटवायचा?</item>
-    <item quantity="other">निवडलेले संदेश हटवायचे?</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="one">हे निवडलेला संदेश कायमचे हटवेल.</item>
-    <item quantity="other">हे %1$d निवडलेले संदेश कायमचे हटवेल.</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">हटवत आहे</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">संदेश हटवत आहे…</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">दस्तऐवज</string> -->
   <string name="MediaOverviewActivity_Select_all">सर्व निवडा</string>
   <string name="MediaOverviewActivity_collecting_attachments">संलग्न गोळा करत आहे…</string>
+  <string name="MediaOverviewActivity_Audio">ऑडिओ</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal कॉल प्रगती मध्ये</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal कॉल प्रस्थापित करत आहे</string>
@@ -507,6 +505,11 @@
   <string name="PlacePickerActivity_accept_address">पत्ता स्वीकारा</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">आपण स्थापन केलेली Google प्ले सेवेची आवृत्ती व्यवस्थित कार्य करत नाही. कृपया Google प्ले सेवा पुन्हा स्थापन करा आणि पुन्हा प्रयत्न करा.</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">जतन करा</string>
+  <!--ProfileEditOverviewFragment-->
+  <string name="ProfileEditOverviewFragment_profile">प्रोफाईल</string>
+  <string name="ProfileEditOverviewFragment_username">वापरकर्तानाव</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">ह्या अॅपला रेट करा</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">जर आपल्याला हा अॅप वापरणे आवडत असेल, तर कृपया एक क्षण काढून आम्हाला रेट करून आमची मदत करा.</string>
@@ -672,6 +675,10 @@
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">संदेश पाठवायचा?</string>
   <string name="UnverifiedSendDialog_send">पाठवा</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_username">वापरकर्तानाव</string>
+  <string name="UsernameEditFragment_submit">प्रविष्ट करा</string>
+  <string name="UsernameEditFragment_delete">हटवा</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">आपला संपर्क Signal ची जुनी आवृत्ती वापरत आहे.आपला सुरक्षितता नंबर सत्यापित करण्यापूर्वी कृपया त्यांना अद्यतन करण्यास विचारा.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">आपला संपर्क विसंगत QR कोड स्वरूपन सोबत Signal ची नवीन आवृत्ती वापरत आहे. तुलना करण्यासाठी कृपया अद्यतन करा.</string>
@@ -742,6 +749,7 @@
   <string name="NotificationChannel_other">इतर</string>
   <string name="NotificationChannel_group_messages">संदेश</string>
   <string name="NotificationChannel_missing_display_name">अज्ञात</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Signal लॉक केलेले असताना जलद प्रतिसाद अनुपलब्ध!</string>
   <string name="QuickResponseService_problem_sending_message">संदेश पाठविण्यात त्रुटी!</string>
@@ -756,6 +764,7 @@
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">नवीन संदेश</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d आयटम</item>
@@ -821,6 +830,7 @@
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">संपर्क दाखवण्यासाठी Signal ला संपर्क परवानगीची आवश्यकता असते, पण ती कायमची नाकारली गेली आहे. कृपया अॅप सेटिंग मेनू मध्ये सुरू ठेवा, \"परवानग्या\" निवडा, आणि \"संपर्क\" सक्षम करा.</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">संपर्क पुनर्प्राप्त करण्यात त्रुटी, आपले  नेटवर्क कनेक्शन तपासा</string>
+  <string name="ContactSelectionListFragment_okay">ठीक आहे</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">कुठेलही अवरोधित संपर्क नाहीत</string>
   <!--contact_selection_list_fragment-->
@@ -1164,6 +1174,7 @@
   <string name="preferences_chats__when_roaming">रोमिंग असताना</string>
   <string name="preferences_chats__media_auto_download">मिडिया स्वयं-डाऊनलोड करा</string>
   <string name="preferences_chats__message_trimming">संदेश ट्रि्मिंग</string>
+  <string name="preferences_storage__audio">ऑडिओ</string>
   <string name="preferences_advanced__use_system_emoji">सिस्टिम ईमोजी वापरा</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Signal चे बिल्ट-इन ईमोजी समर्थन अक्षम करा</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">आपल्या संपर्काला आपला IP पत्ता कळू न देण्यासाठी सर्व कॉल Signal सर्व्हर वरून रीले करा. सक्षम केल्याने कॉल दर्जा कमी होईल.</string>
@@ -1204,6 +1215,7 @@
   <string name="conversation_context__menu_forward_message">संदेश फॉर्वर्ड करा</string>
   <string name="conversation_context__menu_resend_message">संदेश पुन्हा पाठवा</string>
   <string name="conversation_context__menu_reply_to_message">संदेशाला प्रत्युत्तर द्या</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">संलग्न जतन करा</string>
   <!--conversation_expiring_off-->
@@ -1286,8 +1298,6 @@
   <string name="media_preview__save_title">जतन करा</string>
   <string name="media_preview__forward_title">फॉर्वर्ड करा</string>
   <string name="media_preview__all_media_title">सर्व मिडिया</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">कुठलेही दस्तऐवज नाहीत</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">मिडिया पुनरावलोकन</string>
   <!--new_conversation_activity-->
@@ -1397,5 +1407,8 @@
   <string name="RegistrationLockDialog_reminder">स्मरणपत्र:</string>
   <string name="recipient_preferences__about">याबद्दल</string>
   <string name="Recipient_unknown">अज्ञात</string>
+  <string name="MessageRequestBottomView_accept">स्वीकार करा</string>
+  <string name="MessageRequestBottomView_delete">हटवा</string>
+  <string name="MessageRequestBottomView_block">अवरोधित करा</string>
   <!--EOF-->
 </resources>
