--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -69,6 +69,8 @@
   <string name="BucketedThreadMedia_Yesterday">မနေ့က </string>
   <string name="BucketedThreadMedia_This_week">ဒီအပတ် </string>
   <string name="BucketedThreadMedia_This_month">ဒီလ </string>
+  <string name="BucketedThreadMedia_Large">ကြီးသော</string>
+  <string name="BucketedThreadMedia_Small">သေးငယ်သော</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">အဝင်ဖုန်း​</string>
   <!--CameraActivity-->
@@ -91,6 +93,8 @@
   <string name="ClearProfileActivity_remove_profile_photo">ဓါတ်ပုံ ဖယ်ရှားမှာလား ?</string>
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Web Browser ကိုရှာမတွေ့ပါ</string>
+  <string name="CommunicationActions_cancel">မလုပ်တော့ပါ</string>
+  <string name="CommunicationActions_call">ဖုန်းခေါ်ဆိုမှု </string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">%1$sဖြင့် စိတ်ချရသော ဖုန်းနံပတ်ပြောင်းလဲသွားသည်။ တစ်စုံတစ်ယောက်က သင့်ဆက်သွယ်မှုကို ကြားဖြတ်ခြင်းကြောင့် သို့မဟုတ် %2$s Signal ကို ဖြုတ်လိုက်ခြင်းကြောင့် ဖြစ်နိုင်သည်။</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">ဤလူနှင့် ဆက်သွယ်ရန် စိတ်ချရသောနံပါတ်ကို အတည်ပြုပါမည်လား။ </string>
@@ -351,17 +355,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">အင်တာနက်ဝန်ဆောင်မှုမှ MMS အပြင်အဆင်များ ဖတ်၍မရပါ</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">ရုပ်၊သံ၊ပုံ များ</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="other">ရွေးထားသည့် စာများကို ဖျက်မည်လား?</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="other">ရွေးချယ်ထားသည့် စာများ %1$d ကို အပြီးတိုင်ဖျက်လိမ့်မည်။  </item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">ဖျက်နေဆဲ</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">စာများဖျက်နေသည်</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">စာရွက်စာတမ်းများ</string> -->
   <string name="MediaOverviewActivity_Select_all">အားလုံးကို ရွေးပါ</string>
   <string name="MediaOverviewActivity_collecting_attachments">ပူးတွဲဖိုင်များကို စုစည်းနေသည် </string>
+  <string name="MediaOverviewActivity_Audio">အသံ</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal ဖုန်းခေါ်နေသည်</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal ဖုန်းခေါ်ဆိုမှုစတင်နေသည်</string>
@@ -436,6 +434,10 @@
   <string name="PlacePickerActivity_title">မြေပုံ</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">သင်သွင်းထားသော Google Play ဗားရှင်းသည် ကောင်းကောင်းအလုပ်မလုပ်ပါသဖြင့် အသစ်ပြန်သွင်းပြီး ထပ်မံစမ်းသပ်ကြည့်ပါ။</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">သိမ်းသည် </string>
+  <!--ProfileEditOverviewFragment-->
+  <string name="ProfileEditOverviewFragment_profile">ပရိဖိုင်း</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">ဒီ app ကို အမှတ်ပေးပါ</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">ဒီ app ကိုကြိုက်လျှင် အချိန်အနည်းငယ်မျှ ပေးပြီး အမှတ်ပေးပေးပါ။</string>
@@ -564,6 +566,9 @@
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">စာပို့မလား?</string>
   <string name="UnverifiedSendDialog_send">ပို့ပါ</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_submit">တင်မည်</string>
+  <string name="UsernameEditFragment_delete">ဖျက်မည်</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">သင့်မိတ်ဆွေသည် signal ဗားရှင်းအဟောင်းအသုံးပြုထားပါသည်။ လုံခြုံရေးနံပါတ်များ အတည်မပြုခင် Signal ဗားရှင်းအား မြှင့်တင်ခိုင်းလိုက်ပါ။</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">သင့်မိတ်ဆွေသည်  Signal ဗားရှင်းအသစ်နှင့် သင်နှင့်လိုက်လျောညီထွေမရှိသည့် QR code ပုံစံကိုအသုံးပြုထားပါသည်။ နှိုင်းယှဉ်စစ်ဆေးရန် အဆင့်မြှင့်ပါ။</string>
@@ -626,6 +631,7 @@
   <string name="NotificationChannel_other">အခြား</string>
   <string name="NotificationChannel_group_messages">စာများ</string>
   <string name="NotificationChannel_missing_display_name">မသိ</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Signal လော့ခ်ကျသွားသည့်အခါ ချက်ချင်းမတုံ့ပြန်နိုင်ပါ!</string>
   <string name="QuickResponseService_problem_sending_message">စာပို့ခြင်းအခက်အခဲ</string>
@@ -637,6 +643,7 @@
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">စာအသစ်</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <!--UnauthorizedReminder-->
   <string name="UnauthorizedReminder_device_no_longer_registered">ယခုဖုန်းမှာ မှတ်ပုံတင်ထားခြင်း မရှိတော့ပါ</string>
@@ -975,6 +982,7 @@
   <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">စကားဝိုင်းမှ သတ်မှတ်ထားသည့် ပမာဏကျော်သည်နှင့် တစ်ပြိုင်နက် စာအဟောင်းများကို အလိုအလျောက် ဖျက်ပါ</string>
   <string name="preferences__delete_old_messages">စာတိုအဟောင်းများကို ဖျက်ပါ။</string>
   <string name="preferences__chats">စကားစမြည်များနှင့် ရုပ်/သံ/ပုံများ</string>
+  <string name="preferences__storage">သိမ်းဆည်းရာ</string>
   <string name="preferences__conversation_length_limit">စာလုံးရေ အကန့်အသတ်</string>
   <string name="preferences__trim_all_conversations_now">စကားဝိုင်းများအားလုံးကို အခု ညှိပါ</string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">စကားဝိုင်းများအားလုံးကို သေချာကြည့်ပြီး စကားဝိုင်း၏ အရှည်ကန့်သတ်ချက်ကို အတည်ပြုပါ</string>
@@ -1000,6 +1008,7 @@
   <string name="preferences_chats__when_roaming">Roaming လုပ်သည့်အခါ</string>
   <string name="preferences_chats__media_auto_download">ရုပ်/သံ/ပုံကို အလိုအလျောက် ဒေါင်းလုတ်လုပ်ပါ</string>
   <string name="preferences_chats__message_trimming">စာများကို ညှိခြင်း</string>
+  <string name="preferences_storage__audio">အသံ</string>
   <string name="preferences_advanced__use_system_emoji">emoji စနစ်ကို သုံးပါ</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Signal ရဲ့ emoji ကို ပိတ်ပါ</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">သင်၏ လိပ်စာစာရင်းတွင် သင့် IP address ပေါ်လာခြင်းကို ရှောင်လွှဲရန်အတွက် ဖုန်းခေါ်ဆိုမှုများ အားလုံးကို Signal ဆာဗာကို လွှဲပြောင်းပါ။ ဤသို့ လွှဲပြောင်းလိုက်ပါက ဖုန်းခေါ်ဆိုမှု အရည်အသွေး ကျသွားနိုင်ပါသည်။</string>
@@ -1034,6 +1043,7 @@
   <string name="conversation_context__menu_forward_message">စာတို ဆက်ပို့ရန်</string>
   <string name="conversation_context__menu_resend_message">စာကို ပြန်ပို့ပါ</string>
   <string name="conversation_context__menu_reply_to_message">စာပြန်ပို့မည်</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">ပူးတွဲဖိုင်ကို သိမ်းပါ</string>
   <!--conversation_expiring_off-->
@@ -1111,8 +1121,6 @@
   <string name="media_preview__save_title">သိမ်းထားပါ။</string>
   <string name="media_preview__forward_title">ထပ်ဆင့် ပေးပို့ပါ။</string>
   <string name="media_preview__all_media_title">ရုပ်/သံ/ပုံ စာများအားလုံး</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">စာရွက်စာတမ်းများ မရှိပါ။ </string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description"> ရုပ်/သံ/ပုံပါ စာများကို အစမ်းကြည့်ခြင်း</string>
   <!--new_conversation_activity-->
@@ -1216,5 +1224,8 @@
   <string name="RegistrationLockDialog_reminder">သတိပေးချက်</string>
   <string name="recipient_preferences__about">အကြောင်း</string>
   <string name="Recipient_unknown">မသိ</string>
+  <string name="MessageRequestBottomView_accept">လက်ခံသည် </string>
+  <string name="MessageRequestBottomView_delete">ဖျက်မည်</string>
+  <string name="MessageRequestBottomView_block">တားမြစ်မည်</string>
   <!--EOF-->
 </resources>
