--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -72,6 +72,8 @@
   <string name="BucketedThreadMedia_Yesterday">Ontem</string>
   <string name="BucketedThreadMedia_This_week">Esta semana</string>
   <string name="BucketedThreadMedia_This_month">Este mês</string>
+  <string name="BucketedThreadMedia_Large">Grande</string>
+  <string name="BucketedThreadMedia_Small">Pequena</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">A receber chamada</string>
   <!--CameraActivity-->
@@ -98,6 +100,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Não foi encontrado nenhum navegador de Internet.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Já está a decorrer uma chamada através das redes móveis.</string>
+  <string name="CommunicationActions_cancel">Cancelar</string>
+  <string name="CommunicationActions_call">Telefonar</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">O seu número de segurança com %1$s foi alterado. Isto poderá significar que alguém está a tentar intercetar esta comunicação ou simplesmente que %2$s reinstalou o Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Você poderá desejar verificar o seu número de segurança com este contacto.</string>
@@ -106,6 +110,8 @@
   <string name="ContactsCursorLoader_recent_chats">Conversas recentes</string>
   <string name="ContactsCursorLoader_contacts">Contactos</string>
   <string name="ContactsCursorLoader_groups">Grupos</string>
+  <string name="ContactsCursorLoader_phone_number_search">Pesquisar número de telefone</string>
+  <string name="ContactsCursorLoader_username_search">Pesquisar nome de utilizador</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Mensagem %s</string>
   <string name="ContactsDatabase_signal_call_s">Chamada do Signal %s</string>
@@ -398,19 +404,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">Erro ao ler as configurações do operador MMS</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Multimédia</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="one">Apagar mensagem seleccionada?</item>
-    <item quantity="other">Eliminar mensagens selecionadas?</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="one">Isto irá eliminar permanentemente a mensagem selecionada.</item>
-    <item quantity="other">Isto irá eliminar permanentemente todas as %1$d mensagens selecionadas.</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">A eliminar</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">A eliminar mensagens…</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Documentos</string> -->
   <string name="MediaOverviewActivity_Select_all">Seleccionar tudo</string>
   <string name="MediaOverviewActivity_collecting_attachments">A recolher anexos…</string>
+  <string name="MediaOverviewActivity_Audio">Áudio</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Chamada do Signal em curso</string>
   <string name="NotificationBarManager__establishing_signal_call">A estabelecer chamada do Signal</string>
@@ -506,6 +504,11 @@
   <string name="PlacePickerActivity_accept_address">Aceitar endereço</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">A versão do Google Play Services que tem instalada não está a funcionar corretamente. Por favor, reinstale o Google Play Services e tente novamente.</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">Guardar</string>
+  <!--ProfileEditOverviewFragment-->
+  <string name="ProfileEditOverviewFragment_profile">Perfil</string>
+  <string name="ProfileEditOverviewFragment_username">Nome de utilizador</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Avaliar esta aplicação</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Se gostou desta aplicação, ajude-nos avaliando-a.</string>
@@ -671,6 +674,10 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">Enviar mensagem?</string>
   <string name="UnverifiedSendDialog_send">Enviar</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_username">Nome de utilizador</string>
+  <string name="UsernameEditFragment_submit">Submeter</string>
+  <string name="UsernameEditFragment_delete">Eliminar</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">O seu contacto está a utilizar uma versão antiga do Signal. Por favor peça-lhe para actualizar antes de verificar o seu número de segurança.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">O seu contacto está a utilizar uma versão mais recente do Signal, com um formato de código QR incompatível. Por favor, actualize para comparar.</string>
@@ -741,6 +748,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="NotificationChannel_other">Outro</string>
   <string name="NotificationChannel_group_messages">Mensagens</string>
   <string name="NotificationChannel_missing_display_name">Desconhecido</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Resposta rápida encontra-se indisponível enquanto o Signal estiver bloqueado!</string>
   <string name="QuickResponseService_problem_sending_message">Problema no envio da mensagem!</string>
@@ -755,6 +763,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Nova mensagem</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d Item</item>
@@ -820,6 +829,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">O Signal requer permissão de acesso aos contactos para visualizar os seus contactos, mas esta foi negada permanentemente. Por favor, aceda às definições da aplicação, seleccione \"Permissões\" e ative \"Contactos\".</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Problema a obter os contactos, verifique a sua ligação à rede</string>
+  <string name="ContactSelectionListFragment_okay">Ok</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Sem contactos bloqueados</string>
   <!--contact_selection_list_fragment-->
@@ -1135,6 +1145,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Apagar automaticamente as mensagens mais antigas quando uma conversa exceder um tamanho especifico</string>
   <string name="preferences__delete_old_messages">Apagar mensagens antigas</string>
   <string name="preferences__chats">Conversas e multimédia</string>
+  <string name="preferences__storage">Armazenamento</string>
   <string name="preferences__conversation_length_limit">Tamanho máximo das conversas</string>
   <string name="preferences__trim_all_conversations_now">Reduzir agora todas as conversas</string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Pesquisar por todas as conversas e limitá-las ao tamanho máximo das conversas</string>
@@ -1163,6 +1174,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="preferences_chats__when_roaming">Ao utilizar o roaming</string>
   <string name="preferences_chats__media_auto_download">Descarregar multimédia automaticamente</string>
   <string name="preferences_chats__message_trimming">Redução da mensagem</string>
+  <string name="preferences_storage__audio">Áudio</string>
   <string name="preferences_advanced__use_system_emoji">Utilizar os emojis do sistema</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Desativar o suporte de emojis próprios do Signal</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Passar todas as chamadas pelo servidor do Signal para evitar revelar o seu endereço IP ao destinatário. Ativar esta opção irá reduzir a qualidade da chamada.</string>
@@ -1203,6 +1215,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="conversation_context__menu_forward_message">Reencaminhar mensagem</string>
   <string name="conversation_context__menu_resend_message">Reenviar mensagem</string>
   <string name="conversation_context__menu_reply_to_message">Responder à mensagem</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Guardar anexo</string>
   <!--conversation_expiring_off-->
@@ -1286,8 +1299,6 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="media_preview__save_title">Gravar</string>
   <string name="media_preview__forward_title">Reencaminhar</string>
   <string name="media_preview__all_media_title">Toda a multimédia</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Sem documentos</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Pré-visualização de multimédia</string>
   <!--new_conversation_activity-->
@@ -1415,5 +1426,8 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="RegistrationLockDialog_reminder">Lembrete:</string>
   <string name="recipient_preferences__about">Sobre</string>
   <string name="Recipient_unknown">Desconhecido</string>
+  <string name="MessageRequestBottomView_accept">Aceitar</string>
+  <string name="MessageRequestBottomView_delete">Eliminar</string>
+  <string name="MessageRequestBottomView_block">Bloquear</string>
   <!--EOF-->
 </resources>
