--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -76,6 +76,8 @@
   <string name="BucketedThreadMedia_Yesterday">Јуче</string>
   <string name="BucketedThreadMedia_This_week">Ове седмице</string>
   <string name="BucketedThreadMedia_This_month">Овог месеца</string>
+  <string name="BucketedThreadMedia_Large">Велики</string>
+  <string name="BucketedThreadMedia_Small">Мали</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Долазни позив</string>
   <!--CameraActivity-->
@@ -102,6 +104,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">На вашем уређају нема Веб прегледача.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Позив преко мобилног оператера је већ у току.</string>
+  <string name="CommunicationActions_cancel">Одустани</string>
+  <string name="CommunicationActions_call">Позови</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Ваш безбедносни број са %1$s је промењен. Ово може да значи или да неко покушава да пресретне вашу комуникацију или да је корисник %2$s једноставно поново инсталирао Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Можда желите да потврдите ваш безбедносни број за овај контакт.</string>
@@ -407,21 +411,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">Грешка читања поставки ММС послужиоца</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Медији</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="one">Обрисати изабрану поруку?</item>
-    <item quantity="few">Обрисати изабране поруке?</item>
-    <item quantity="other">Обрисати изабране поруке?</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="one">Овиме ћете заувек обрисати означену поруку.</item>
-    <item quantity="few">Овиме ћете заувек обрисати %1$d означене поруке.</item>
-    <item quantity="other">Овиме ћете заувек обрисати %1$d означених порука.</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Брисање</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Брисање порука…</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Документи</string> -->
   <string name="MediaOverviewActivity_Select_all">Изабери све</string>
   <string name="MediaOverviewActivity_collecting_attachments">Прикупљање прилога…</string>
+  <string name="MediaOverviewActivity_Audio">Звук</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Позив преко Signal-a у току</string>
   <string name="NotificationBarManager__establishing_signal_call">Успостављам Signal позив</string>
@@ -516,6 +510,9 @@
   <string name="PlacePickerActivity_accept_address">Прихвати адресу</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Инсталирано издање Гуглових Плеј сервиса не функционише исправно. Реинсталирајте Гуглове Плеј сервисе и покушајте поново.</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">Сачувај</string>
+  <!--ProfileEditOverviewFragment-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Оцените апликацију</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Ако уживате у коришћењу ове апликације, помозите нам тако што ћете да је оцените.</string>
@@ -667,6 +664,9 @@
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">Да пошаљем поруку?</string>
   <string name="UnverifiedSendDialog_send">Пошаљи</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_submit">Пошаљи</string>
+  <string name="UsernameEditFragment_delete">Обриши</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Ваш контакт има старије издање Signal-a. Замолите их да ажурирају пре потврде ваших безбедносних бројева.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Ваш контакт има новије издање Signal-a са некомпатибилним форматом  бар-кôда. Ажурирајте Signal да бисте могли да упоређујете.</string>
@@ -733,6 +733,7 @@
   <string name="NotificationChannel_other">Остало</string>
   <string name="NotificationChannel_group_messages">Поруке</string>
   <string name="NotificationChannel_missing_display_name">Непозната</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Брзи одговор није доступан ако је Signal закључан!</string>
   <string name="QuickResponseService_problem_sending_message">Проблем са слањем поруке!</string>
@@ -746,6 +747,7 @@
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Нова порука</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d ставка</item>
@@ -1124,6 +1126,7 @@
   <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Аутоматско брисање старих порука када преписка пређе наведену дужину</string>
   <string name="preferences__delete_old_messages">Бриши старе поруке</string>
   <string name="preferences__chats">Ћаскања и медији</string>
+  <string name="preferences__storage">Складиште</string>
   <string name="preferences__conversation_length_limit">Ограничење дужине преписке</string>
   <string name="preferences__trim_all_conversations_now">Скрати све преписке сада</string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Претражи све преписке и наметни ограничења дужине</string>
@@ -1151,6 +1154,7 @@
   <string name="preferences_chats__when_roaming">У ромингу</string>
   <string name="preferences_chats__media_auto_download">Ауто-преузимање медија</string>
   <string name="preferences_chats__message_trimming">Скраћивање порука</string>
+  <string name="preferences_storage__audio">Звук</string>
   <string name="preferences_advanced__use_system_emoji">Користи системски емоџи</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Искључи уграђене Signal-ове емоџије</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Преусмеравање свих позива преко Signal-овог сервера да би се избегло откривање ваше ИП адресе вашем контакту.  Умањује квалитет позива.</string>
@@ -1187,6 +1191,7 @@
   <string name="conversation_context__menu_forward_message">Проследи поруку</string>
   <string name="conversation_context__menu_resend_message">Понови слање</string>
   <string name="conversation_context__menu_reply_to_message">Одговори на поруку</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Сачувај прилог</string>
   <!--conversation_expiring_off-->
@@ -1268,8 +1273,6 @@
   <string name="media_preview__save_title">Сачувај</string>
   <string name="media_preview__forward_title">Проследи</string>
   <string name="media_preview__all_media_title">Сви медији</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Нема докумената</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Преглед медијума</string>
   <!--new_conversation_activity-->
@@ -1377,5 +1380,8 @@
   <string name="RegistrationLockDialog_reminder">Подсетник:</string>
   <string name="recipient_preferences__about">О контакту</string>
   <string name="Recipient_unknown">Непозната</string>
+  <string name="MessageRequestBottomView_accept">Прихвати</string>
+  <string name="MessageRequestBottomView_delete">Обриши</string>
+  <string name="MessageRequestBottomView_block">Блокирај</string>
   <!--EOF-->
 </resources>
