--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -72,6 +72,8 @@
   <string name="BucketedThreadMedia_Yesterday">jana</string>
   <string name="BucketedThreadMedia_This_week">Wiki hii</string>
   <string name="BucketedThreadMedia_This_month">Mwezi huu</string>
+  <string name="BucketedThreadMedia_Large">Kubwa</string>
+  <string name="BucketedThreadMedia_Small">Ndogo</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Simu inaingia</string>
   <!--CameraActivity-->
@@ -97,6 +99,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">hakuna kivinjari cha web kilichopatikana</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Simu ya mkononi inapigwa sasa hivi.</string>
+  <string name="CommunicationActions_cancel">futa</string>
+  <string name="CommunicationActions_call">wito</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Unaweza kufafanua nambari yako ya usalama na anwani hii.</string>
   <string name="ConfirmIdentityDialog_accept">Kubali</string>
@@ -353,19 +357,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">kosa wakati wa kusoma mtoa huduma ya mipangilio ya wireless MMS </string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Midia</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="one">Futa ujumbe umechagua?</item>
-    <item quantity="other">Futa ujumbe umechagua?</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="one">This will permanently delete the selected message.</item>
-    <item quantity="other">Hii, itafutwa kabisa meseji %1$d zote zimehiari.</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Inafutwa</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Kufuta meseji</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">nyaraka</string> -->
   <string name="MediaOverviewActivity_Select_all">Chagua vyote</string>
   <string name="MediaOverviewActivity_collecting_attachments">kukusanya viambatisho</string>
+  <string name="MediaOverviewActivity_Audio">Sauti</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">wito wa signal inaendelea</string>
   <string name="NotificationBarManager__establishing_signal_call">Kuanzisha wito wa signal</string>
@@ -452,6 +448,9 @@ Signal inahitaji ruhusa ya Kamera ili kupima msimbo wa QR, lakini imekataliwa ka
   <string name="PlacePickerActivity_not_a_valid_address">Anwani si halali</string>
   <string name="PlacePickerActivity_accept_address">Kubali anwani</string>
   <!--PlayServicesProblemFragment-->
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">Hifadhi</string>
+  <!--ProfileEditOverviewFragment-->
   <!--RatingManager-->
   <string name="RatingManager_rate_now">Kiwango cha sasa</string>
   <string name="RatingManager_no_thanks">Nashukuru hapana</string>
@@ -584,6 +583,9 @@ nambari yako ya simu</string>
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">tuma ujumbe?</string>
   <string name="UnverifiedSendDialog_send">tuma</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_submit">tuma</string>
+  <string name="UsernameEditFragment_delete">Futa</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Mawasiliano yako inaendesha toleo la zamani la Signal. Tafadhali waulize update kabla ya kuthibitisha nambari yako ya usalama.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Mawasiliano yako inaendesha toleo jipya la Signal na muundo wa msimbo wa QR usiofanana. Tafadhali sasisha ili ulinganishe</string>
@@ -648,6 +650,7 @@ nambari yako ya simu</string>
   <string name="NotificationChannel_other">ingine</string>
   <string name="NotificationChannel_group_messages">ujumbe</string>
   <string name="NotificationChannel_missing_display_name">Isiyojulikana</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Jibu la haraka halipatikani wakati Signal imefungwa!</string>
   <string name="QuickResponseService_problem_sending_message">Tatizo kutuma ujumbe</string>
@@ -662,6 +665,7 @@ nambari yako ya simu</string>
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Alama</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Ujumbe mpya</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">Kitu %d</item>
@@ -1045,6 +1049,7 @@ nambari yako ya simu</string>
   <string name="preferences_chats__when_roaming">wakati wa kutembea</string>
   <string name="preferences_chats__media_auto_download">Kushusha kwa vyombo vya habari</string>
   <string name="preferences_chats__message_trimming">ujumbe unapunguza</string>
+  <string name="preferences_storage__audio">Sauti</string>
   <string name="preferences_advanced__use_system_emoji">Tumia emoji ya mfumo</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">kuzuia Signal iliyojengwa kusaidia emoji</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Kuwawezesha kupunguza ubora wa simu</string>
@@ -1085,6 +1090,7 @@ nambari yako ya simu</string>
   <string name="conversation_context__menu_forward_message">Ujumbe wa mbele</string>
   <string name="conversation_context__menu_resend_message">Tuma tena ujumbe</string>
   <string name="conversation_context__menu_reply_to_message">Jibu ujumbe</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Hifadhi attachment</string>
   <!--conversation_expiring_off-->
@@ -1162,8 +1168,6 @@ nambari yako ya simu</string>
   <string name="media_preview__save_title">Hifadhi</string>
   <string name="media_preview__forward_title">Mbele</string>
   <string name="media_preview__all_media_title">Vyombo vyote vya habari</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Hakuna nyaraka</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Uhakiki wa vyombo vya habari</string>
   <!--new_conversation_activity-->
@@ -1270,5 +1274,8 @@ Funga ufikiaji wa Signal na lock ya Android au alama za vidole</string>
   <string name="RegistrationLockDialog_reminder">Kumbusha</string>
   <string name="recipient_preferences__about">Kuhusu</string>
   <string name="Recipient_unknown">Isiyojulikana</string>
+  <string name="MessageRequestBottomView_accept">Kubali</string>
+  <string name="MessageRequestBottomView_delete">Futa</string>
+  <string name="MessageRequestBottomView_block">Zuia</string>
   <!--EOF-->
 </resources>
