--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -72,6 +72,8 @@
   <string name="BucketedThreadMedia_Yesterday">Dün</string>
   <string name="BucketedThreadMedia_This_week">Bu hafta</string>
   <string name="BucketedThreadMedia_This_month">Bu ay</string>
+  <string name="BucketedThreadMedia_Large">Büyük</string>
+  <string name="BucketedThreadMedia_Small">Küçük</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Gelen arama</string>
   <!--CameraActivity-->
@@ -98,6 +100,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Hiçbir web tarayıcısı bulunamadı.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Zaten bir hücresel arama sürmekte.</string>
+  <string name="CommunicationActions_cancel">İptal</string>
+  <string name="CommunicationActions_call">Ara</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">%1$s ile olan güvenlik numaranız değişti. Bu, birisinin iletişiminizi kesmeye çalıştığı ya da %2$s Signal\'i yeniden yüklemiş olduğu anlamına gelebilir.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Bu kişiyle güvenlik numaranızı doğrulamak isteyebilirsiniz.</string>
@@ -106,6 +110,8 @@
   <string name="ContactsCursorLoader_recent_chats">Son sohbetler</string>
   <string name="ContactsCursorLoader_contacts">Kişiler</string>
   <string name="ContactsCursorLoader_groups">Gruplar</string>
+  <string name="ContactsCursorLoader_phone_number_search">Telefon numarası ara</string>
+  <string name="ContactsCursorLoader_username_search">Kullanıcı adı ara</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">İleti %s</string>
   <string name="ContactsDatabase_signal_call_s">Signal Araması %s</string>
@@ -398,19 +404,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">Kablosuz MMS sağlayıcısı ayarları okunurken hata</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">İçerik</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="one">Seçilen iletiyi sil?</item>
-    <item quantity="other">Seçilen iletileri sil?</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="one">Bu eylem seçtiğiniz iletiyi kalıcı olarak silecektir.</item>
-    <item quantity="other">Bu eylem seçtiğiniz %1$d iletiyi kalıcı olarak silecektir.</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Siliniyor</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">İletiler siliniyor…</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Belgeler</string> -->
   <string name="MediaOverviewActivity_Select_all">Hepsini seç</string>
   <string name="MediaOverviewActivity_collecting_attachments">Eklentiler toplanıyor…</string>
+  <string name="MediaOverviewActivity_Audio">Ses</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal araması sürüyor</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal araması kuruluyor</string>
@@ -507,6 +505,11 @@
   <string name="PlacePickerActivity_accept_address">Adresi onayla</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Kurulu Google Play Hizmetleri sürümü doğru çalışmıyor. Lütfen Google Play Hizmetleri\'ni tekrar yükleyin ve yeniden deneyin.</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">Kaydet</string>
+  <!--ProfileEditOverviewFragment-->
+  <string name="ProfileEditOverviewFragment_profile">Profil</string>
+  <string name="ProfileEditOverviewFragment_username">Kullanıcı adı</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Bu uygulamaya puan verin</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Bu uygulamayı kullanmaktan hoşlanıyorsanız, lütfen bir dakikanızı ayırıp puan vererek bize yardımcı olun.</string>
@@ -674,6 +677,10 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">İleti gönderilsin mi?</string>
   <string name="UnverifiedSendDialog_send">Gönder</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_username">Kullanıcı adı</string>
+  <string name="UsernameEditFragment_submit">Gönder</string>
+  <string name="UsernameEditFragment_delete">Sil</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Kişiniz Signal\'in eski bir sürümünü kullanmakta. Güvenlik numaranızı doğrulamadan önce uygulamayı güncellemelerini rica edin.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Kişiniz Signal\'in uyumsuz karekod formatına sahip yeni bir sürümünü kullanıyor. Karşılaştırmak için lütfen güncelleyin.</string>
@@ -744,6 +751,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="NotificationChannel_other">Diğer</string>
   <string name="NotificationChannel_group_messages">İletiler</string>
   <string name="NotificationChannel_missing_display_name">Bilinmeyen</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Signal kilitliyken hızlı cevap kullanılamaz!</string>
   <string name="QuickResponseService_problem_sending_message">İleti gönderilirken hata!</string>
@@ -758,6 +766,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Yeni ileti</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d Öğe</item>
@@ -823,6 +832,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">Signal, kişileriniz gösterebilmek için Kişiler iznine ihtiyaç duyar, fakat bu izin kalıcı olarak reddedilmiş. Lütfen uygulama ayarları menüsüne girip \"İzinler\" kısmını seçin, ve \"Kişiler\"i etkinleştirin.</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Kişiler alınırken hata oluştu, ağ bağlantınızı kontrol edin</string>
+  <string name="ContactSelectionListFragment_okay">Tamam</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Hiç engellenmiş kişi yok</string>
   <!--contact_selection_list_fragment-->
@@ -1166,6 +1176,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="preferences_chats__when_roaming">Dolaşımdayken</string>
   <string name="preferences_chats__media_auto_download">Otomatik içerik indirme</string>
   <string name="preferences_chats__message_trimming">İleti kırpma</string>
+  <string name="preferences_storage__audio">Ses</string>
   <string name="preferences_advanced__use_system_emoji">Sistem emojilerini kullan</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Signal\'in dahili emoji desteğini devre dışı bırak</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">IP adresinizi kişinize göstermekten kaçınmak için tüm aramaları Signal sunucusundan aktarın. Etkinleştirildiğinde arama kalitesi düşecektir.</string>
@@ -1206,6 +1217,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="conversation_context__menu_forward_message">İletiyi yönlendir</string>
   <string name="conversation_context__menu_resend_message">İletiyi tekrar gönder</string>
   <string name="conversation_context__menu_reply_to_message">İletiyi yanıtla</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Eklentiyi kaydet</string>
   <!--conversation_expiring_off-->
@@ -1289,8 +1301,6 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="media_preview__save_title">Kaydet</string>
   <string name="media_preview__forward_title">Yönlendir</string>
   <string name="media_preview__all_media_title">Tüm içerik</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Belge yok</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">İçerik önizlemesi</string>
   <!--new_conversation_activity-->
@@ -1418,5 +1428,8 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="RegistrationLockDialog_reminder">Hatırlatma:</string>
   <string name="recipient_preferences__about">Hakkında</string>
   <string name="Recipient_unknown">Bilinmeyen</string>
+  <string name="MessageRequestBottomView_accept">Kabul et</string>
+  <string name="MessageRequestBottomView_delete">Sil</string>
+  <string name="MessageRequestBottomView_block">Engelle</string>
   <!--EOF-->
 </resources>
