--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -72,6 +72,8 @@
   <string name="BucketedThreadMedia_Yesterday">کل</string>
   <string name="BucketedThreadMedia_This_week">اس ہفتے</string>
   <string name="BucketedThreadMedia_This_month">اس مہینے</string>
+  <string name="BucketedThreadMedia_Large">بڑے</string>
+  <string name="BucketedThreadMedia_Small">چھوٹا</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">موصول ہونے والی کال</string>
   <!--CameraActivity-->
@@ -98,6 +100,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">کوئی ویب براؤزر نہیں ملا۔</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">ایک سیلولر کال پہلے سے جاری ہے۔</string>
+  <string name="CommunicationActions_cancel">منسوخ کریں</string>
+  <string name="CommunicationActions_call">کال</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">آپ کا حفاظتی نمبر %1$sکے ساتھ تبدیل ہو چکا ہے۔ اس کا دوسرا مطلب یہ ہے کہ کوئی آپ کے ذرائع ابلاغ کو روکنے کی کوشش کر رہا ہے،یا یہ %2$sSignal سادگی سے دوبارہ نصب کیا گیا ہے۔</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">آپ اس رابطے کے ساتھ اپنے حفاظتی نمبر کی تصدیق کرنا چاہتے ہیں۔</string>
@@ -106,6 +110,8 @@
   <string name="ContactsCursorLoader_recent_chats">موجودہ گفتگو</string>
   <string name="ContactsCursorLoader_contacts">رابطے</string>
   <string name="ContactsCursorLoader_groups">گروپس</string>
+  <string name="ContactsCursorLoader_phone_number_search">فون نمبر تلاش کریں</string>
+  <string name="ContactsCursorLoader_username_search">صارف کا نام تلاش کریں</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">پیغام %s</string>
   <string name="ContactsDatabase_signal_call_s">Signal کال %s</string>
@@ -399,19 +405,11 @@
   <string name="MmsDownloader_error_reading_mms_settings">وائر لیس فراہم کنندہ ایم ایم ایس کی ترتیبات کو پڑھنے میں غلطی</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">میڈیا</string>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="one">منتخب شدہ پیغامات حذف کریں؟</item>
-    <item quantity="other">منتخب شدہ پیغامات حذف کریں؟</item>
-  </plurals>
-  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="one">یہ منتخب شدہ پیغامات مستقل طور پر حذف کر دے گا۔</item>
-    <item quantity="other">یہ منتخب شدہ پیغامات %1$dمستقل طور پر حذف کر دے گا۔</item>
-  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">حذف ہو رہا ہے</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">پیغامات حذف ہو رہے ہیں۔۔۔</string>
-  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">دستاویزات</string> -->
   <string name="MediaOverviewActivity_Select_all">تمام منتخب کریں</string>
   <string name="MediaOverviewActivity_collecting_attachments">منسلک چیزیں جمح کر رہے ہیں۔۔۔</string>
+  <string name="MediaOverviewActivity_Audio">آڈیو</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">signal کال پروگریس میں ہے</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal کال قائم ہو رہی ہے</string>
@@ -507,6 +505,11 @@
   <string name="PlacePickerActivity_accept_address">ایڈریس قبول کریں</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">گوگل پلے سروسز کاجو ورژن آپ نے نصب کیا ہے وہ صحیح کام نہیں کر رہا۔ براہ کرم گوگل پلے سروسز دوبارہ نصب کریں اور دوبارہ کوشش کریں۔</string>
+  <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_save">محفوظ کریں</string>
+  <!--ProfileEditOverviewFragment-->
+  <string name="ProfileEditOverviewFragment_profile">پروفائل </string>
+  <string name="ProfileEditOverviewFragment_username">صارف کا نام</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">ایپ کی درجہ بندی کریں</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">اگر آپ اس ایپ کو استعمال کرکے لطف اٹھا رہے ہیں، براہ کرم ایک لمحہ لیں جس سے درجہ بندی کرنے میں ہماری مدد ہو۔</string>
@@ -666,6 +669,10 @@
   <!--UnverifiedSendDialog-->
   <string name="UnverifiedSendDialog_send_message">پیغام بھیجیں؟</string>
   <string name="UnverifiedSendDialog_send">بھیجیں</string>
+  <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_username">صارف کا نام</string>
+  <string name="UsernameEditFragment_submit">جمع کرائیں</string>
+  <string name="UsernameEditFragment_delete">حذف کریں</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">آپ کا رابطہ Signal کے ایک پرانے ورژن پر چل رہا ہے۔ براہ کرم اپنا حفاظتی نمبر تصدیق کرنے سے پہلے تجدید کا پوچھ لیں۔</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">آپ کا رابطہ غیر متوازن QR کوڈ وضع کے ساتھ Signal کا ایک نیا ورژن چل رہا ہے۔ براہ کرم موازنہ کرنے کے لئے اپ ڈیٹ کریں.</string>
@@ -736,6 +743,7 @@
   <string name="NotificationChannel_other">دوسرے</string>
   <string name="NotificationChannel_group_messages">پیغامات</string>
   <string name="NotificationChannel_missing_display_name">نامعلوم</string>
+  <!--ProfileEditNameFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">جب Signal  لاک ہو فوری جواب دستیاب نہیں!</string>
   <string name="QuickResponseService_problem_sending_message">پیغام بھیجنے میں مسئلہ ہو رہا ہے!</string>
@@ -750,6 +758,7 @@
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">نيا پیغام</string>
+  <!--ThumbnailView-->
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d</item>
@@ -815,6 +824,7 @@
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">رابطے ظاہر کرنے کیلئے Signal کو رابطوں کی اجازت کی ضرورت ہے،لیکن یہ مستقل طور پر انکاری ہے۔ برائے مہربانی ایپ کی ترتیبات میں جائیں، \"اجازت نامہ\"منتخب کریں، اور \"رابطے\" فعال کریں۔</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">رابطے دوبارہ حاصل کرنے میں خرابی،اپنا نیٹ ورک کنکشن چیک کریں</string>
+  <string name="ContactSelectionListFragment_okay">ٹھیک ہے</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts"> رابطے بلاک نہیں ہیں</string>
   <!--contact_selection_list_fragment-->
@@ -1159,6 +1169,7 @@
   <string name="preferences_chats__when_roaming">جب رومنگ ہو رہی ہو</string>
   <string name="preferences_chats__media_auto_download">میڈیا آٹو ڈاون لوڈ</string>
   <string name="preferences_chats__message_trimming">پیغام صحیح ترتیب دے رہا ہے</string>
+  <string name="preferences_storage__audio">آڈیو</string>
   <string name="preferences_advanced__use_system_emoji">سسٹم ایموجی استعمال کریں</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Signal کی بلٹ ان ایموجی سپورٹ کو غیر فعال کریں</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">اپنے رابطوں پر اپنا IP ایڈریس ظاہر کرنے سے بچنے کیلئے Signal سرور کے ذریعے تمام کالوں کو ریلے کریں۔ فعال کرنے سے کال کا معیار کم ہوجائے گا۔</string>
@@ -1199,6 +1210,7 @@
   <string name="conversation_context__menu_forward_message">پیغام آگے بھیجیں</string>
   <string name="conversation_context__menu_resend_message">پیغام دوبارہ بھیجیں</string>
   <string name="conversation_context__menu_reply_to_message">پیغام کا جواب دیں</string>
+  <!--conversation_context_reacction-->
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">منسلک چیزیں محفوظ کریں</string>
   <!--conversation_expiring_off-->
@@ -1281,8 +1293,6 @@
   <string name="media_preview__save_title">محفوظ کریں</string>
   <string name="media_preview__forward_title">آگے</string>
   <string name="media_preview__all_media_title">تمام میڈیا</string>
-  <!--media_overview-->
-  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">دستاویزات نہیں ہیں</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">میڈیا کا جائزہ لینا</string>
   <!--new_conversation_activity-->
@@ -1392,5 +1402,8 @@
   <string name="RegistrationLockDialog_reminder">یاد دہانی کرانا:</string>
   <string name="recipient_preferences__about">متعلق</string>
   <string name="Recipient_unknown">نامعلوم</string>
+  <string name="MessageRequestBottomView_accept">قبول کریں</string>
+  <string name="MessageRequestBottomView_delete">حذف کریں</string>
+  <string name="MessageRequestBottomView_block">بلاک</string>
   <!--EOF-->
 </resources>
